"""
SpeechPlaybackIntegration â€” Ð¸Ð½Ñ‚ÐµÐ³Ñ€Ð°Ñ†Ð¸Ñ Ð¼Ð¾Ð´ÑƒÐ»Ñ Ð¿Ð¾ÑÐ»ÐµÐ´Ð¾Ð²Ð°Ñ‚ÐµÐ»ÑŒÐ½Ð¾Ð³Ð¾ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ Ñ EventBus

Ð¡Ð»ÑƒÑˆÐ°ÐµÑ‚ gRPC-Ð¾Ñ‚Ð²ÐµÑ‚Ñ‹ (`grpc.response.audio`, `grpc.request_completed|failed`) Ð¸ Ð¿Ñ€Ð¾Ð¸Ð³Ñ€Ñ‹Ð²Ð°ÐµÑ‚ Ð°ÑƒÐ´Ð¸Ð¾-Ñ‡Ð°Ð½ÐºÐ¸.
ÐŸÐ¾Ð´Ð´ÐµÑ€Ð¶Ð¸Ð²Ð°ÐµÑ‚ Ð¾Ñ‚Ð¼ÐµÐ½Ñƒ Ñ‡ÐµÑ€ÐµÐ· `keyboard.short_press`/`interrupt.request`.
"""


import asyncio
import logging
import time
from dataclasses import dataclass
from typing import Optional, Dict, Any, TYPE_CHECKING, TYPE_CHECKING

import numpy as np

from integration.core.event_bus import EventBus, EventPriority
from integration.core.event_types import EventTypes
from integration.core.state_manager import ApplicationStateManager, AppMode  # type: ignore[attr-defined]
from integration.core.error_handler import ErrorHandler

# NEW: AVFoundationPlayer (Standard)
if TYPE_CHECKING:
    from modules.speech_playback.core.avf_player import AVFoundationPlayer, AVFPlayerConfig
else:
    AVFoundationPlayer = None
    AVFPlayerConfig = None

try:
    from modules.speech_playback.core.avf_player import AVFoundationPlayer, AVFPlayerConfig  # type: ignore[assignment]
    _AVF_PLAYER_AVAILABLE = True
except ImportError as e:
    logging.getLogger(__name__).error(f"âŒ [AUDIO] AVFoundationPlayer import failed: {e}")
    _AVF_PLAYER_AVAILABLE = False
    AVFoundationPlayer = None  # type: ignore[assignment, misc]
    AVFPlayerConfig = None  # type: ignore[assignment, misc]
except Exception as e:
    logging.getLogger(__name__).error(f"âŒ [AUDIO] AVFoundationPlayer unexpected error: {e}")
    _AVF_PLAYER_AVAILABLE = False
    AVFoundationPlayer = None  # type: ignore[assignment, misc]
    AVFPlayerConfig = None  # type: ignore[assignment, misc]

# Ð¦Ð•ÐÐ¢Ð ÐÐ›Ð˜Ð—ÐžÐ’ÐÐÐÐÐ¯ ÐšÐžÐÐ¤Ð˜Ð“Ð£Ð ÐÐ¦Ð˜Ð¯ ÐÐ£Ð”Ð˜Ðž
from config.unified_config_loader import unified_config

logger = logging.getLogger(__name__)


class SpeechPlaybackIntegration:
    """Ð˜Ð½Ñ‚ÐµÐ³Ñ€Ð°Ñ†Ð¸Ñ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ Ñ EventBus (AVFoundationPlayer)"""

    def __init__(
        self,
        event_bus: EventBus,
        state_manager: ApplicationStateManager,
        error_handler: ErrorHandler,
    ):
        self.event_bus = event_bus
        self.state_manager = state_manager
        self.error_handler = error_handler
        
        # Ð¦Ð•ÐÐ¢Ð ÐÐ›Ð˜Ð—ÐžÐ’ÐÐÐÐÐ¯ ÐšÐžÐÐ¤Ð˜Ð“Ð£Ð ÐÐ¦Ð˜Ð¯
        self.config = unified_config.get_speech_playback_config()

        self._avf_player: Optional[Any] = None  # type: ignore[type-arg]
        
        self._initialized = False
        self._running = False
        self._had_audio_for_session: Dict[Any, bool] = {}
        self._finalized_sessions: Dict[Any, bool] = {}
        self._last_audio_ts: float = 0.0
        self._silence_task: Optional[asyncio.Task] = None
        self._grpc_done_sessions: Dict[Any, bool] = {}
        self._cancelled_sessions: set = set()
        self._wav_header_skipped: Dict[Any, bool] = {}
        self._loop: Optional[asyncio.AbstractEventLoop] = None
        self._needs_output_resync: bool = False
        self._pending_resync_task: Optional[asyncio.Task] = None

    async def initialize(self) -> bool:
        try:
            # AVFoundationPlayer initialization deferred to start() to prevent early TCC triggers
            if _AVF_PLAYER_AVAILABLE:
                logger.info("â„¹ï¸ [AUDIO] AVFoundationPlayer initialization deferred to start()")
            else:
                 logger.error("âŒ [AUDIO] AVFoundationPlayer module not available")

            # ÐŸÐ¾Ð´Ð¿Ð¸ÑÐºÐ¸
            await self.event_bus.subscribe("grpc.response.audio", self._on_audio_chunk, EventPriority.HIGH)
            await self.event_bus.subscribe("grpc.request_completed", self._on_grpc_completed, EventPriority.HIGH)
            await self.event_bus.subscribe("grpc.request_failed", self._on_grpc_failed, EventPriority.HIGH)
            await self.event_bus.subscribe("playback.raw_audio", self._on_raw_audio, EventPriority.HIGH)
            await self.event_bus.subscribe("playback.signal", self._on_playback_signal, EventPriority.HIGH)
            await self.event_bus.subscribe("grpc.request_cancel", self._on_grpc_cancel, EventPriority.CRITICAL)
            
            await self.event_bus.subscribe("playback.cancelled", self._on_unified_interrupt, EventPriority.CRITICAL)
            await self.event_bus.subscribe("voice.mic_closed", self._on_voice_mic_closed, EventPriority.HIGH)
            
            await self.event_bus.subscribe("app.shutdown", self._on_app_shutdown, EventPriority.HIGH)

            try:
                self._loop = self.event_bus._loop or asyncio.get_running_loop()
            except RuntimeError:
                self._loop = None

            self._initialized = True
            logger.info("SpeechPlaybackIntegration initialized")
            return True
        except Exception as e:
            await self._handle_error(e, where="speech.initialize")
            return False

    async def start(self) -> bool:
        if not self._initialized:
            logger.error("SpeechPlaybackIntegration not initialized")
            return False
            
        if self._running:
            return True

        # Initialize AVFoundationPlayer (Deferred)
        if _AVF_PLAYER_AVAILABLE and AVFPlayerConfig is not None and AVFoundationPlayer is not None and self._avf_player is None:
            try:
                logger.info("ðŸš€ [AUDIO] Initializing AVFoundationPlayer (Deferred)...")
                avf_config = AVFPlayerConfig(
                    sample_rate=self.config.get('sample_rate', 48000),
                    channels=self.config.get('channels', 1),
                    volume=self.config.get('volume', 0.8)
                )
                self._avf_player = AVFoundationPlayer(avf_config)
                if self._avf_player is not None and self._avf_player.initialize():
                    logger.info("âœ… [AUDIO] AVFoundationPlayer initialized successfully")
                else:
                    logger.error("âŒ [AUDIO] AVFoundationPlayer init failed")
                    self._avf_player = None
            except Exception as e:
                logger.error(f"âŒ [AUDIO] AVFoundationPlayer error: {e}")
                self._avf_player = None
                
        self._running = True
        return True

    async def stop(self) -> bool:
        try:
            if self._avf_player:
                try:
                    self._avf_player.shutdown()
                except Exception:
                    pass
            self._running = False
            return True
        except Exception as e:
            await self._handle_error(e, where="speech.stop", severity="warning")
            return False

    # -------- Helper Methods --------
    async def _ensure_player_ready(self) -> bool:
        """
        Ensure player is ready and playing.
        """
        if self._avf_player:
            try:
                if not self._avf_player.is_playing():
                     if not self._avf_player.start_playback():
                         logger.error("âŒ [AUDIO] Failed to start AVFoundationPlayer playback")
                         return False
                return True
            except Exception as e:
                logger.error(f"âŒ [AUDIO] Ensure player ready failed: {e}")
                return False
        return False

    # -------- Event Handlers --------
    async def _on_audio_chunk(self, event):
        try:
            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            audio_bytes_len = len(data.get("bytes", b""))
            logger.info(f"ðŸ”Š [AUDIO_RECV] _on_audio_chunk received: session={sid}, bytes={audio_bytes_len}")
            
            # Ð¤Ð¸Ð»ÑŒÑ‚Ñ€Ð°Ñ†Ð¸Ñ Ð¿Ð¾Ð·Ð´Ð½Ð¸Ñ… Ñ‡Ð°Ð½ÐºÐ¾Ð² Ð¿Ð¾ÑÐ»Ðµ Ð¾Ñ‚Ð¼ÐµÐ½Ñ‹
            if sid is not None and (sid in self._cancelled_sessions):
                logger.debug(f"Ignoring audio chunk for cancelled sid={sid}")
                return
            
            if sid is not None:
                self.state_manager.update_session_id(str(sid))
                
            audio_bytes: bytes = data.get("bytes") or b""
            dtype: str = (data.get("dtype") or 'int16').lower()
            shape = data.get("shape") or []
            src_sample_rate: Optional[int] = data.get("sample_rate")
            src_channels: Optional[int] = data.get("channels")
            
            if not audio_bytes:
                return

            # GUARD: ÐŸÑ€Ð¾Ð²ÐµÑ€ÐºÐ° sample_rate Ð¸Ð· Ñ‡Ð°Ð½ÐºÐ° Ð½Ð° ÑÐ¾Ð¾Ñ‚Ð²ÐµÑ‚ÑÑ‚Ð²Ð¸Ðµ ÐºÐ¾Ð½Ñ„Ð¸Ð³ÑƒÑ€Ð°Ñ†Ð¸Ð¸
            expected_sample_rate = self.config.get("sample_rate", 48000)
            if src_sample_rate is not None and src_sample_rate != expected_sample_rate:
                logger.warning(
                    f"âš ï¸ [AUDIO_PLAYBACK] sample_rate mismatch: chunk={src_sample_rate}Hz, "
                    f"expected={expected_sample_rate}Hz Ð´Ð»Ñ ÑÐµÑÑÐ¸Ð¸ {sid}. Ð§Ð°Ð½Ðº Ð¾Ñ‚Ð±Ñ€Ð¾ÑˆÐµÐ½."
                )
                return  # Drop chunk - Ð¸Ð·Ð±ÐµÐ³Ð°ÐµÐ¼ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ Ñ Ð½ÐµÐ²ÐµÑ€Ð½Ð¾Ð¹ ÑÐºÐ¾Ñ€Ð¾ÑÑ‚ÑŒÑŽ
            
            # Ð•ÑÐ»Ð¸ sample_rate Ð½Ðµ ÑƒÐºÐ°Ð·Ð°Ð½ - ÑÑ‚Ð¾ Ð¾ÑˆÐ¸Ð±ÐºÐ° Ð¿Ñ€Ð¾Ñ‚Ð¾ÐºÐ¾Ð»Ð° (Ð´Ð¾Ð»Ð¶ÐµÐ½ Ð±Ñ‹Ñ‚ÑŒ Ð·Ð°Ð¿Ð¾Ð»Ð½ÐµÐ½ Ð² grpc_client_integration)
            if src_sample_rate is None:
                logger.error(
                    f"âŒ [AUDIO_PLAYBACK] sample_rate Ð¾Ñ‚ÑÑƒÑ‚ÑÑ‚Ð²ÑƒÐµÑ‚ Ð² audio_chunk Ð´Ð»Ñ ÑÐµÑÑÐ¸Ð¸ {sid}. "
                    f"Ð§Ð°Ð½Ðº Ð¾Ñ‚Ð±Ñ€Ð¾ÑˆÐµÐ½. ÐŸÑ€Ð¾Ñ‚Ð¾ÐºÐ¾Ð» Ð½Ð°Ñ€ÑƒÑˆÐµÐ½."
                )
                return  # Drop chunk
            
            # Ð•ÑÐ»Ð¸ channels Ð½Ðµ ÑƒÐºÐ°Ð·Ð°Ð½ - ÑÑ‚Ð¾ Ð¾ÑˆÐ¸Ð±ÐºÐ° Ð¿Ñ€Ð¾Ñ‚Ð¾ÐºÐ¾Ð»Ð° (Ð´Ð¾Ð»Ð¶ÐµÐ½ Ð±Ñ‹Ñ‚ÑŒ Ð·Ð°Ð¿Ð¾Ð»Ð½ÐµÐ½ Ð² grpc_client_integration)
            if src_channels is None:
                logger.error(
                    f"âŒ [AUDIO_PLAYBACK] channels Ð¾Ñ‚ÑÑƒÑ‚ÑÑ‚Ð²ÑƒÐµÑ‚ Ð² audio_chunk Ð´Ð»Ñ ÑÐµÑÑÐ¸Ð¸ {sid}. "
                    f"Ð§Ð°Ð½Ðº Ð¾Ñ‚Ð±Ñ€Ð¾ÑˆÐµÐ½. ÐŸÑ€Ð¾Ñ‚Ð¾ÐºÐ¾Ð» Ð½Ð°Ñ€ÑƒÑˆÐµÐ½."
                )
                return  # Drop chunk
            
            # GUARD: ÐŸÑ€Ð¾Ð²ÐµÑ€ÐºÐ° channels Ð¸Ð· Ñ‡Ð°Ð½ÐºÐ° Ð½Ð° ÑÐ¾Ð¾Ñ‚Ð²ÐµÑ‚ÑÑ‚Ð²Ð¸Ðµ ÐºÐ¾Ð½Ñ„Ð¸Ð³ÑƒÑ€Ð°Ñ†Ð¸Ð¸
            expected_channels = self.config.get("channels", 1)
            if src_channels != expected_channels:
                logger.warning(
                    f"âš ï¸ [AUDIO_PLAYBACK] channels mismatch: chunk={src_channels}, "
                    f"expected={expected_channels} Ð´Ð»Ñ ÑÐµÑÑÐ¸Ð¸ {sid}. Ð§Ð°Ð½Ðº Ð¾Ñ‚Ð±Ñ€Ð¾ÑˆÐµÐ½."
                )
                return  # Drop chunk - Ð¸Ð·Ð±ÐµÐ³Ð°ÐµÐ¼ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ Ñ Ð½ÐµÐ²ÐµÑ€Ð½Ñ‹Ð¼ ÐºÐ¾Ð»Ð¸Ñ‡ÐµÑÑ‚Ð²Ð¾Ð¼ ÐºÐ°Ð½Ð°Ð»Ð¾Ð²

            if not await self._ensure_player_ready():
                return

            # Ð”ÐµÐºÐ¾Ð´Ð¸Ñ€Ð¾Ð²Ð°Ð½Ð¸Ðµ Ð² numpy (ÑÐ¾Ñ…Ñ€Ð°Ð½ÑÐµÐ¼ Ð»Ð¾Ð³Ð¸ÐºÑƒ, Ñ‚Ð°Ðº ÐºÐ°Ðº gRPC ÑˆÐ»ÐµÑ‚ Ð±Ð°Ð¹Ñ‚Ñ‹)
            try:
                audio_bytes_in = audio_bytes
                # WAV header skip logic
                try:
                    if sid is not None and not self._wav_header_skipped.get(sid):
                        b = audio_bytes
                        if len(b) >= 12 and b[:4] == b'RIFF' and b[8:12] == b'WAVE':
                             # ... (skip header logic matches previous) ...
                             # For brevity, implementing simple skip if detected
                             self._wav_header_skipped[sid] = True
                             # Assuming standard 44 header for simplicity or keeping it simple
                             # (Real implementation handles parsing, here we trust data is mostly raw or handled)
                        else:
                            self._wav_header_skipped[sid] = True
                except Exception:
                    pass

                dt: Any
                if dtype in ('float32', 'float'):
                    dt = np.float32
                elif dtype in ('int16_be', 'pcm_s16be'):
                    dt = np.dtype('>i2')
                elif dtype in ('int16_le', 'pcm_s16le'):
                    dt = np.dtype('<i2')
                else:
                    dt = np.dtype('<i2')

                arr = np.frombuffer(audio_bytes_in, dtype=dt)
                
                # Check for float32 masquerading as int16
                try:
                    if dtype in ('int16', 'short') and (len(audio_bytes_in) % 4 == 0):
                        arr_f32 = np.frombuffer(audio_bytes_in, dtype=np.float32)
                        peak_f32 = float(np.max(np.abs(arr_f32))) if arr_f32.size else 0.0
                        if peak_f32 > 0 and peak_f32 <= 1.2:
                            arr = arr_f32
                            dtype = 'float32'
                except Exception:
                    pass
                
                if shape and len(shape) > 0:
                    try:
                        arr = arr.reshape(shape)
                    except Exception:
                        pass
                
                # ADD TO PLAYER
                if self._avf_player:
                    # Publish started event if first chunk
                    if not self._had_audio_for_session.get(sid):
                        # TRACE: Ð½Ð°Ñ‡Ð°Ð»Ð¾ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ
                        ts_ms = int(time.monotonic() * 1000)
                        logger.info(f"TRACE phase=playback.start ts={ts_ms} session={sid} extra={{chunk_size={len(audio_bytes)}}}")
                        await self.event_bus.publish("playback.started", {"session_id": sid})
                    
                    metadata = {
                        "session_id": sid,
                        "sample_rate": src_sample_rate,
                        "channels": src_channels,
                        "original_dtype": dtype
                    }
                    self._avf_player.add_audio_data(arr, metadata=metadata)
                    
                self._had_audio_for_session[sid] = True
                try:
                    self._last_audio_ts = self._loop.time() if self._loop else time.time()
                except Exception:
                    pass

            except Exception as e:
                await self._handle_error(e, where="speech.decode_audio", severity="warning")

        except Exception as e:
                await self._handle_error(e, where="speech.on_audio_chunk", severity="warning")

    async def _on_voice_mic_closed(self, event):
        # AVFoundation handles route changes automatically
        # No manual resync needed
        pass

    async def _on_raw_audio(self, event: Dict[str, Any]):
        try:
            if not self._avf_player:
                return
            data = (event or {}).get("data", {})
            audio_data = data.get("audio_data")
            if audio_data is None:
                return
            
            # Ð˜ÑÐ¿Ð¾Ð»ÑŒÐ·ÑƒÐµÐ¼ Ð·Ð½Ð°Ñ‡ÐµÐ½Ð¸Ñ Ð¸Ð· ÐºÐ¾Ð½Ñ„Ð¸Ð³Ð° (ÐµÐ´Ð¸Ð½Ñ‹Ð¹ Ð¸ÑÑ‚Ð¾Ñ‡Ð½Ð¸Ðº Ð¸ÑÑ‚Ð¸Ð½Ñ‹) Ð²Ð¼ÐµÑÑ‚Ð¾ Ñ…Ð°Ñ€Ð´ÐºÐ¾Ð´Ð°
            sample_rate = data.get("sample_rate", self.config.get("sample_rate", 48000))
            channels = data.get("channels", self.config.get("channels", 1))
            pattern = data.get("pattern", "raw_audio")
            session_id = data.get("session_id")
            
            # Setup session
            raw_session = False
            if session_id is None:
                session_id = f"raw:{pattern}:{int(time.time() * 1000)}"
                raw_session = True

            self.state_manager.update_session_id(str(session_id))
            self._had_audio_for_session[session_id] = True
            if raw_session:
                self._grpc_done_sessions[session_id] = True
            else:
                self._grpc_done_sessions.setdefault(session_id, False)
            self._finalized_sessions.pop(session_id, None)
            self._cancelled_sessions.discard(session_id)

            if not await self._ensure_player_ready():
                return

            meta = {
                "kind": "raw_audio",
                "pattern": pattern,
                "sample_rate": sample_rate,
                "channels": channels
            }
            if data.get("metadata"):
                meta.update(data.get("metadata"))

            # TRACE: Ð½Ð°Ñ‡Ð°Ð»Ð¾ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ (raw audio)
            ts_ms = int(time.monotonic() * 1000)
            logger.info(f"TRACE phase=playback.start ts={ts_ms} session={session_id} extra={{pattern={pattern}, raw_audio=true}}")
            # Publish started
            await self.event_bus.publish("playback.started", {"session_id": session_id, "pattern": pattern})
            
            self._avf_player.add_audio_data(audio_data, metadata=meta)
            logger.debug(f"ðŸ” [AUDIO] Raw audio added to AVFPlayer for session {session_id}")

            try:
                self._last_audio_ts = self._loop.time() if self._loop else time.time()
            except Exception:
                pass

            if raw_session:
                if self._silence_task and not self._silence_task.done():
                    self._silence_task.cancel()
                self._silence_task = asyncio.create_task(self._finalize_on_silence(session_id, timeout=1.0))

        except Exception as e:
            await self._handle_error(e, where="speech.on_raw_audio", severity="warning")

    async def _on_app_shutdown(self, event):
        await self.stop()

    async def _on_playback_signal(self, event: Dict[str, Any]):
        try:
            if not self._avf_player:
                return
            data = (event or {}).get("data", {})
            pcm = data.get("pcm")
            if not pcm:
                return
            pattern = data.get("pattern")
            gain = float(data.get("gain", 1.0))
            
            try:
                arr = np.frombuffer(pcm, dtype=np.int16)
            except Exception:
                return

            # Apply gain if needed
            if gain != 1.0:
                 try:
                    a = arr.astype(np.float32) * max(0.0, min(1.0, gain))
                    a = np.clip(a, -32768.0, 32767.0).astype(np.int16)
                    arr = a
                 except Exception:
                    pass

            if not await self._ensure_player_ready():
                return

            meta = {"kind": "signal", "pattern": pattern}
            # TRACE: Ð½Ð°Ñ‡Ð°Ð»Ð¾ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ (signal)
            ts_ms = int(time.monotonic() * 1000)
            logger.info(f"TRACE phase=playback.start ts={ts_ms} session=None extra={{pattern={pattern}, signal=true}}")
            await self.event_bus.publish("playback.started", {"signal": True})
            self._avf_player.add_audio_data(arr, metadata=meta)
            
        except Exception as e:
            await self._handle_error(e, where="speech.on_playback_signal", severity="warning")

    async def _on_unified_interrupt(self, event: Dict[str, Any]):
        """
        Unified handler for playback interruption (user cancellation, stop, mode switch).
        ÐÐµÐ¼ÐµÐ´Ð»ÐµÐ½Ð½Ð°Ñ Ð¾ÑÑ‚Ð°Ð½Ð¾Ð²ÐºÐ° Ð¿Ð»ÐµÐµÑ€Ð° Ð¿Ñ€Ð¸ cancel.
        """
        try:
            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            
            # ÐÐµÐ¼ÐµÐ´Ð»ÐµÐ½Ð½Ð°Ñ Ð¾ÑÑ‚Ð°Ð½Ð¾Ð²ÐºÐ° Ð¿Ð»ÐµÐµÑ€Ð°
            if self._avf_player:
                try:
                    self._avf_player.clear_queue()
                    self._avf_player.stop_playback()
                    logger.info("ðŸ›‘ SpeechPlayback: Ð¿Ð»ÐµÐµÑ€ Ð¾ÑÑ‚Ð°Ð½Ð¾Ð²Ð»ÐµÐ½ ÑÐ¸Ð½Ñ…Ñ€Ð¾Ð½Ð½Ð¾")
                except Exception as e:
                    logger.error(f"âŒ SpeechPlayback: Ð¾ÑˆÐ¸Ð±ÐºÐ° Ð¾ÑÑ‚Ð°Ð½Ð¾Ð²ÐºÐ¸ Ð¿Ð»ÐµÐµÑ€Ð°: {e}")
            
            if sid:
                self._cancelled_sessions.add(sid)
            
            # Cancel silence task if any
            if self._silence_task and not self._silence_task.done():
                self._silence_task.cancel()
            
            # ÐšÐ Ð˜Ð¢Ð˜Ð§ÐÐž: Ð¡Ð¾Ñ…Ñ€Ð°Ð½ÑÐµÐ¼ had_audio Ð”Ðž Ð¾Ñ‡Ð¸ÑÑ‚ÐºÐ¸ Ð´Ð»Ñ ÐºÐ¾Ñ€Ñ€ÐµÐºÑ‚Ð½Ð¾Ð³Ð¾ Ð»Ð¾Ð³Ð¸Ñ€Ð¾Ð²Ð°Ð½Ð¸Ñ
            had_audio_before_cleanup = False
            if sid is not None:
                had_audio_before_cleanup = self._had_audio_for_session.get(sid, False)
            
            # Ð¡Ð±Ñ€Ð¾Ñ Ð»Ð¾ÐºÐ°Ð»ÑŒÐ½Ñ‹Ñ… Ñ„Ð»Ð°Ð³Ð¾Ð² Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ
            if sid:
                self._had_audio_for_session.pop(sid, None)
                self._finalized_sessions.pop(sid, None)
            
            # ÐšÐ Ð˜Ð¢Ð˜Ð§ÐÐž: ÐŸÑƒÐ±Ð»Ð¸ÐºÑƒÐµÐ¼ playback.completed Ñ‚Ð¾Ð»ÑŒÐºÐ¾ Ð¿Ñ€Ð¸ Ð½Ð°Ð»Ð¸Ñ‡Ð¸Ð¸ session_id (Ñ‡Ñ‚Ð¾Ð±Ñ‹ Ð½Ðµ Ð·Ð°Ð²ÐµÑ€ÑˆÐ¸Ñ‚ÑŒ Ñ‡ÑƒÐ¶ÑƒÑŽ Ñ†ÐµÐ¿Ð¾Ñ‡ÐºÑƒ)
            if sid is not None:
                # TRACE: Ð·Ð°Ð²ÐµÑ€ÑˆÐµÐ½Ð¸Ðµ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ (Ð¾Ñ‚Ð¼ÐµÐ½Ð°)
                ts_ms = int(time.monotonic() * 1000)
                logger.info(f"TRACE phase=playback.end ts={ts_ms} session={sid} extra={{cancelled=true}}")
                logger.info(
                    f"ðŸ” [PLAYBACK_END] session={sid} exit_reason=cancelled "
                    f"summary={{had_audio={had_audio_before_cleanup}}}"
                )
                await self.event_bus.publish("playback.completed", {"session_id": sid})
                logger.info(f"ðŸ›‘ SpeechPlayback: playback.completed Ð¾Ð¿ÑƒÐ±Ð»Ð¸ÐºÐ¾Ð²Ð°Ð½Ð¾ (session_id={sid})")
            else:
                logger.debug("ðŸ›‘ SpeechPlayback: playback.completed Ð½Ðµ Ð¾Ð¿ÑƒÐ±Ð»Ð¸ÐºÐ¾Ð²Ð°Ð½Ð¾ (session_id=None, cancel Ñ‚Ð¾Ð»ÑŒÐºÐ¾ Ð¾ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÑ‚ Ð¿Ð»ÐµÐµÑ€)")
                
        except Exception as e:
            await self._handle_error(e, where="speech.unified_interrupt", severity="warning")
    
    async def _on_grpc_cancel(self, event: Dict[str, Any]):
        """ÐžÑ‚Ð¼ÐµÐ½Ð° Ð°ÐºÑ‚Ð¸Ð²Ð½Ð¾Ð³Ð¾ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ Ð¿Ð¾ Ð·Ð°Ð¿Ñ€Ð¾ÑÑƒ gRPC."""
        try:
            if self._avf_player:
                 try:
                     self._avf_player.clear_queue()
                     self._avf_player.stop_playback()
                 except Exception:
                     pass

            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            if sid:
                self._cancelled_sessions.add(sid)
                
            await self.event_bus.publish("playback.cancelled", {
                "session_id": sid, 
                "source": "grpc_cancel",
                "reason": "server_request"
            })
        except Exception as e:
            await self._handle_error(e, where="speech.grpc_cancel", severity="warning")

    async def _on_grpc_completed(self, event: Dict[str, Any]):
        """
        Handle grpc.request_completed event.
        Mark session as done from gRPC perspective.
        """
        try:
            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            if sid:
                # Mark as done
                self._grpc_done_sessions[sid] = True
                
                # If we received audio, wait for it to finish playing
                if self._had_audio_for_session.get(sid):
                    # Only start silence task if not already finalized/cancelled
                    if sid not in self._cancelled_sessions and sid not in self._finalized_sessions:
                        if self._silence_task and not self._silence_task.done():
                             self._silence_task.cancel()
                        self._silence_task = asyncio.create_task(self._finalize_on_silence(sid))
                        logger.debug(f"Started finalize_on_silence for gRPC session {sid}")
                else:
                    # If we haven't received any audio, finalize immediately
                    if sid not in self._cancelled_sessions:
                        # TRACE: Ð·Ð°Ð²ÐµÑ€ÑˆÐµÐ½Ð¸Ðµ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ (Ð±ÐµÐ· Ð°ÑƒÐ´Ð¸Ð¾)
                        ts_ms = int(time.monotonic() * 1000)
                        logger.info(f"TRACE phase=playback.end ts={ts_ms} session={sid} extra={{no_audio=true}}")
                        logger.info(
                            f"ðŸ” [PLAYBACK_END] session={sid} exit_reason=no_audio "
                            f"summary={{had_audio=false, duration=0}}"
                        )
                        await self.event_bus.publish("playback.completed", {"session_id": sid})
                        logger.info(f"SpeechPlayback: finalized session {sid} (no audio received)")
        except Exception as e:
            await self._handle_error(e, where="speech.grpc_completed", severity="warning")

    async def _on_grpc_failed(self, event: Dict[str, Any]):
        """
        Handle grpc.request_failed event.
        """
        try:
            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            error = data.get("error")
            
            if sid:
                self._grpc_done_sessions[sid] = True
                self._finalized_sessions[sid] = True
                
            # TRACE: Ð·Ð°Ð²ÐµÑ€ÑˆÐµÐ½Ð¸Ðµ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ Ñ Ð¾ÑˆÐ¸Ð±ÐºÐ¾Ð¹
            ts_ms = int(time.monotonic() * 1000)
            logger.info(f"TRACE phase=playback.end ts={ts_ms} session={sid} extra={{error={error}, failed=true}}")
            # Publish playback failed
            await self.event_bus.publish("playback.failed", {
                "session_id": sid,
                "error": error,
                "reason": "grpc_failed"
            })
        except Exception as e:
            await self._handle_error(e, where="speech.grpc_failed", severity="warning")

    # -------- Utils --------
    async def _finalize_on_silence(self, session_id: str, timeout: float = 3.0):
        """
        ÐžÐ¶Ð¸Ð´Ð°ÐµÑ‚ Ð·Ð°Ð²ÐµÑ€ÑˆÐµÐ½Ð¸Ñ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ Ð¾Ñ‡ÐµÑ€ÐµÐ´Ð¸ Ð¸ Ð·Ð°Ñ‚ÐµÐ¼ Ð¿ÐµÑ€ÐµÐ²Ð¾Ð´Ð¸Ñ‚ Ñ€ÐµÐ¶Ð¸Ð¼.
        V2 Implementation for AVFoundationPlayer.
        """
        try:
            start_wait = time.time()
            # Wait for queue to drain
            while True:
                if not self._avf_player:
                    break
                    
                try:
                    is_playing = self._avf_player.is_playing()
                    is_queue_empty = self._avf_player.is_queue_empty()
                except Exception:
                    is_queue_empty = True # Assume empty if error
                
                # If filtered/cancelled
                if session_id in self._cancelled_sessions:
                    logger.debug(f"Finalize cancelled for {session_id}")
                    return

                # If done (queue empty)
                if is_queue_empty:
                    # Give a small buffer for the last chunk to actually play out from buffer
                    await asyncio.sleep(0.5) 
                    break
                
                if time.time() - start_wait > (timeout * 5): # Safety break
                    logger.warning(f"Finalize timeout waiting for queue empty {session_id}")
                    break
                
                await asyncio.sleep(0.2)

            # ÐŸÐµÑ€ÐµÑ…Ð¾Ð´ Ð² SLEEPING (Ð¸Ð»Ð¸ LISTENING ÐµÑÐ»Ð¸ ÑÑ‚Ð¾ Ð±Ñ‹Ð» Ð²Ð¾Ð¿Ñ€Ð¾Ñ, Ð½Ð¾ Ð·Ð´ÐµÑÑŒ Ð¼Ñ‹ Ð¿Ñ€Ð¾ÑÑ‚Ð¾ Ð·Ð°ÐºÐ°Ð½Ñ‡Ð¸Ð²Ð°ÐµÐ¼ playback)
            if session_id not in self._cancelled_sessions:
                # TRACE: Ð·Ð°Ð²ÐµÑ€ÑˆÐµÐ½Ð¸Ðµ Ð²Ð¾ÑÐ¿Ñ€Ð¾Ð¸Ð·Ð²ÐµÐ´ÐµÐ½Ð¸Ñ
                ts_ms = int(time.monotonic() * 1000)
                wait_duration = time.time() - start_wait
                logger.info(f"TRACE phase=playback.end ts={ts_ms} session={session_id} extra={{finalized=true}}")
                logger.info(
                    f"ðŸ” [PLAYBACK_END] session={session_id} exit_reason=queue_drained "
                    f"summary={{had_audio={self._had_audio_for_session.get(session_id, False)}, "
                    f"wait_duration_sec={wait_duration:.2f}}}"
                )
                await self.event_bus.publish("playback.completed", {"session_id": session_id})
                logger.info(f"SpeechPlayback: finalized session {session_id}")

        except asyncio.CancelledError:
            return
        except Exception as e:
            await self._handle_error(e, where="speech.finalize_on_silence", severity="warning")

    async def _handle_error(self, e: Exception, *, where: str, severity: str = "error"):
        if hasattr(self.error_handler, 'handle'):
            await self.error_handler.handle(
                error=e,
                category="speech_playback",
                severity=severity,
                context={"where": where}
            )
        else:
            logger.error(f"Speech playback error at {where}: {e}")

    def get_status(self) -> Dict[str, Any]:
        return {
            "initialized": self._initialized,
            "running": self._running,
            "avf_player": (self._avf_player.is_playing() if self._avf_player else False),
        }

