"""
Welcome Player ‚Äî –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏—è, —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω–æ–≥–æ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ.
"""

import logging
from typing import Any, Callable

import numpy as np

from modules.grpc_client.core.grpc_client import GrpcClient

from .audio_generator import WelcomeAudioGenerator
from .types import WelcomeConfig, WelcomeResult, WelcomeState

logger = logging.getLogger(__name__)


class WelcomePlayer:
    """–ü–ª–µ–µ—Ä –¥–ª—è –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—è –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–µ–Ω–Ω–æ–≥–æ —Å–æ–æ–±—â–µ–Ω–∏—è"""
    
    def __init__(
        self,
        config: WelcomeConfig,
        *,
        grpc_client: GrpcClient | None = None,
        grpc_server_name: str | None = None,
        grpc_timeout: float | None = None,
    ):
        self.config = config
        self.state = WelcomeState.IDLE
        self.audio_generator = WelcomeAudioGenerator(
            config,
            grpc_client=grpc_client,
            grpc_server_name=grpc_server_name,
            grpc_timeout=grpc_timeout,
        )
        
        # –ö–æ–ª–ª–±–µ–∫–∏
        self._on_started: Callable[[], None] | None = None
        self._on_completed: Callable[[WelcomeResult], None] | None = None
        self._on_error: Callable[[str], None] | None = None
        
        # –ü–æ—Å–ª–µ–¥–Ω–µ–µ –ø–æ–¥–≥–æ—Ç–æ–≤–ª–µ–Ω–Ω–æ–µ –∞—É–¥–∏–æ –∏ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
        self._last_audio: np.ndarray | None = None
        self._last_metadata: dict[str, Any] | None = None

    def set_grpc_client(self, grpc_client: GrpcClient | None) -> None:
        """–û–±–Ω–æ–≤–∏—Ç—å gRPC –∫–ª–∏–µ–Ω—Ç –≤ –≥–µ–Ω–µ—Ä–∞—Ç–æ—Ä–µ –∞—É–¥–∏–æ."""
        self.audio_generator.set_grpc_client(grpc_client)
    
    def set_callbacks(
        self,
        on_started: Callable[[], None] | None = None,
        on_completed: Callable[[WelcomeResult], None] | None = None,
        on_error: Callable[[str], None] | None = None
    ):
        """–£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –∫–æ–ª–ª–±–µ–∫–∏ –¥–ª—è —Å–æ–±—ã—Ç–∏–π"""
        self._on_started = on_started
        self._on_completed = on_completed
        self._on_error = on_error
    
    async def play_welcome(self) -> WelcomeResult:
        """
        –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–µ–Ω–Ω–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ

        Returns:
            WelcomeResult —Å —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–º –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—è
        """
        try:
            logger.info("üéµ [WELCOME_PLAYER] –ù–∞—á–∏–Ω–∞—é –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏—è")
            logger.info(f"üîç [WELCOME_PLAYER] config.enabled={self.config.enabled}, config.use_server={self.config.use_server}")
            self.state = WelcomeState.LOADING
            self._last_audio = None
            self._last_metadata = None

            # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –≤–∫–ª—é—á–µ–Ω –ª–∏ –º–æ–¥—É–ª—å
            if not self.config.enabled:
                error_msg = "–ú–æ–¥—É–ª—å –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏—è –æ—Ç–∫–ª—é—á–µ–Ω –≤ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏"
                logger.info(f"üîá [WELCOME_PLAYER] {error_msg}")
                self.state = WelcomeState.ERROR
                
                result = WelcomeResult(
                    success=False,
                    method="none",
                    duration_sec=0.0,
                    error=error_msg
                )
                
                if self._on_error:
                    self._on_error(error_msg)
                if self._on_completed:
                    self._on_completed(result)
                
                return result
            
            # –£–≤–µ–¥–æ–º–ª—è–µ–º –æ –Ω–∞—á–∞–ª–µ
            if self._on_started:
                self._on_started()
            
            if not self.config.use_server:
                error_msg = "–°–µ—Ä–≤–µ—Ä–Ω–æ–µ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏—è –æ—Ç–∫–ª—é—á–µ–Ω–æ –≤ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏"
                logger.error(f"‚ùå [WELCOME_PLAYER] {error_msg}")
                self.state = WelcomeState.ERROR

                result = WelcomeResult(
                    success=False,
                    method="none",
                    duration_sec=0.0,
                    error=error_msg
                )

                if self._on_error:
                    self._on_error(error_msg)
                if self._on_completed:
                    self._on_completed(result)

                return result

            logger.info("üîç [WELCOME_PLAYER] –ó–∞–ø—Ä–∞—à–∏–≤–∞—é —Å–µ—Ä–≤–µ—Ä–Ω–æ–µ –∞—É–¥–∏–æ...")
            logger.info("TRACE [WELCOME_PLAYER] calling _play_server_audio()")
            server_result = await self._play_server_audio()
            logger.info(f"TRACE [WELCOME_PLAYER] _play_server_audio() returned: success={server_result.success}")
            logger.info(f"üîç [WELCOME_PLAYER] –°–µ—Ä–≤–µ—Ä–Ω–æ–µ –∞—É–¥–∏–æ –ø–æ–ª—É—á–µ–Ω–æ: success={server_result.success}, error={server_result.error}")

            if server_result.success:
                logger.info("‚úÖ [WELCOME_PLAYER] –°–µ—Ä–≤–µ—Ä–Ω–æ–µ –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏–µ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–æ —É—Å–ø–µ—à–Ω–æ")
                self.state = WelcomeState.COMPLETED
                if self._on_completed:
                    logger.info("üîç [WELCOME_PLAYER] –í—ã–∑—ã–≤–∞—é _on_completed callback")
                    self._on_completed(server_result)
                return server_result

            # FALLBACK: –ï—Å–ª–∏ —Å–µ—Ä–≤–µ—Ä–Ω–æ–µ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –Ω–µ —É–¥–∞–ª–æ—Å—å, –∏—Å–ø–æ–ª—å–∑—É–µ–º –ª–æ–∫–∞–ª—å–Ω—ã–π —Å–∏–Ω—Ç–µ–∑
            logger.warning(f"‚ö†Ô∏è [WELCOME_PLAYER] –°–µ—Ä–≤–µ—Ä–Ω–æ–µ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –Ω–µ —É–¥–∞–ª–æ—Å—å: {server_result.error}")
            logger.info("üîÑ [WELCOME_PLAYER] –ü–µ—Ä–µ–∫–ª—é—á–∞—é—Å—å –Ω–∞ –ª–æ–∫–∞–ª—å–Ω—ã–π fallback (macOS say)...")
            
            fallback_result = await self._play_local_fallback()
            
            if fallback_result.success:
                logger.info("‚úÖ [WELCOME_PLAYER] –õ–æ–∫–∞–ª—å–Ω–æ–µ –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏–µ (fallback) –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–æ —É—Å–ø–µ—à–Ω–æ")
                self.state = WelcomeState.COMPLETED
                if self._on_completed:
                    self._on_completed(fallback_result)
                return fallback_result

            # –ï—Å–ª–∏ –∏ fallback –Ω–µ —É–¥–∞–ª—Å—è
            error_msg = fallback_result.error or "–í–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏—è (—Å–µ—Ä–≤–µ—Ä + fallback) –Ω–µ —É–¥–∞–ª–æ—Å—å"
            logger.error(f"‚ùå [WELCOME_PLAYER] {error_msg}")
            self.state = WelcomeState.ERROR

            result = WelcomeResult(
                success=False,
                method="none",
                duration_sec=0.0,
                error=error_msg
            )

            if self._on_error:
                logger.info("üîç [WELCOME_PLAYER] –í—ã–∑—ã–≤–∞—é _on_error callback")
                self._on_error(error_msg)
            if self._on_completed:
                logger.info("üîç [WELCOME_PLAYER] –í—ã–∑—ã–≤–∞—é _on_completed callback (–æ—à–∏–±–∫–∞)")
                self._on_completed(result)

            return result

        except Exception as e:
            error_msg = f"–ö—Ä–∏—Ç–∏—á–µ—Å–∫–∞—è –æ—à–∏–±–∫–∞ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—è –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏—è: {e}"
            logger.error(f"‚ùå [WELCOME_PLAYER] {error_msg}")
            logger.exception(f"‚ùå [WELCOME_PLAYER] Stack trace:")
            self.state = WelcomeState.ERROR
            
            result = WelcomeResult(
                success=False,
                method="error",
                duration_sec=0.0,
                error=error_msg
            )
            
            if self._on_error:
                self._on_error(error_msg)
            if self._on_completed:
                self._on_completed(result)
            
            return result
        except BaseException as be:
            logger.critical(f"üõë [WELCOME_PLAYER] FATAL ERROR/CANCELLED: {type(be).__name__}: {be}")
            import traceback
            logger.critical(traceback.format_exc())
            self.state = WelcomeState.ERROR
            raise
    
    async def _play_server_audio(self) -> WelcomeResult:
        """–ü—ã—Ç–∞–µ—Ç—Å—è –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ—Å—Ç–∏ –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–∏–µ, —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω–æ–µ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ"""
        try:
            logger.info(f"üîç [WELCOME_PLAYER] –ì–µ–Ω–µ—Ä–∏—Ä—É—é –∞—É–¥–∏–æ –¥–ª—è —Ç–µ–∫—Å—Ç–∞: '{self.config.text}'")
            audio_data = await self.audio_generator.generate_server_audio(self.config.text)
            logger.info(f"üîç [WELCOME_PLAYER] audio_data is None: {audio_data is None}")

            if audio_data is None:
                logger.error("‚ùå [WELCOME_PLAYER] –°–µ—Ä–≤–µ—Ä–Ω–∞—è –≥–µ–Ω–µ—Ä–∞—Ü–∏—è –≤–µ—Ä–Ω—É–ª–∞ None!")
                return WelcomeResult(
                    success=False,
                    method="server",
                    duration_sec=0.0,
                    error="–°–µ—Ä–≤–µ—Ä–Ω–∞—è –≥–µ–Ω–µ—Ä–∞—Ü–∏—è –≤–µ—Ä–Ω—É–ª–∞ –ø—É—Å—Ç–æ–π —Ä–µ–∑—É–ª—å—Ç–∞—Ç"
                )

            logger.info(f"üîç [WELCOME_PLAYER] audio_data.shape={audio_data.shape}, dtype={audio_data.dtype}")

            server_metadata = self.audio_generator.get_last_server_metadata()
            sample_rate = server_metadata.get('sample_rate', self.config.sample_rate)
            channels = server_metadata.get('channels', self.config.channels)

            total_samples = int(audio_data.size if hasattr(audio_data, 'size') else len(audio_data))
            if audio_data.ndim > 1:
                frame_count = audio_data.shape[0]
            else:
                frame_count = total_samples // max(1, channels)
            duration_sec = frame_count / float(sample_rate)

            logger.info(f"üîç [WELCOME_PLAYER] sample_rate={sample_rate}, channels={channels}, duration={duration_sec:.2f}s")

            metadata = {
                "sample_rate": sample_rate,
                "channels": channels,
                "samples": total_samples,
                "frames": frame_count,
                "method": server_metadata.get('method', 'server'),
                "duration_sec": server_metadata.get('duration_sec', duration_sec),
            }

            self._last_audio = audio_data
            self._last_metadata = metadata

            logger.info("‚úÖ [WELCOME_PLAYER] –°–µ—Ä–≤–µ—Ä–Ω–æ–µ –∞—É–¥–∏–æ —É—Å–ø–µ—à–Ω–æ –ø–æ–¥–≥–æ—Ç–æ–≤–ª–µ–Ω–æ")

            # –í–ê–ñ–ù–û: WelcomePlayer —Ç–æ–ª—å–∫–æ –ø–æ–¥–≥–æ—Ç–∞–≤–ª–∏–≤–∞–µ—Ç –¥–∞–Ω–Ω—ã–µ.
            # –†–µ–∞–ª—å–Ω–æ–µ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –ø—Ä–æ–∏—Å—Ö–æ–¥–∏—Ç –≤ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ —á–µ—Ä–µ–∑ speech_playback_integration.
            # –ù–æ –¥–ª—è –∞—Ä—Ö–∏—Ç–µ–∫—Ç—É—Ä–Ω–æ–π —Ü–µ–ª–æ—Å—Ç–Ω–æ—Å—Ç–∏ –º—ã –≤–æ–∑–≤—Ä–∞—â–∞–µ–º —É—Å–ø–µ—Ö —Ç—É—Ç, 
            # –ø–æ–¥—Ä–∞–∑—É–º–µ–≤–∞—è —á—Ç–æ –¥–∞–Ω–Ω—ã–µ –≥–æ—Ç–æ–≤—ã –∫ –ø–µ—Ä–µ–¥–∞—á–µ –≤ –æ–±—â–∏–π –ø–ª–µ–µ—Ä.
            
            return WelcomeResult(
                success=True,
                method="server",
                duration_sec=duration_sec,
                metadata=metadata
            )

        except Exception as e:
            logger.error(f"‚ùå [WELCOME_PLAYER] –û—à–∏–±–∫–∞ –≤ _play_server_audio: {e}")
            logger.exception(f"‚ùå [WELCOME_PLAYER] Stack trace:")
            return WelcomeResult(
                success=False,
                method="server",
                duration_sec=0.0,
                error=f"–û—à–∏–±–∫–∞ —Å–µ—Ä–≤–µ—Ä–Ω–æ–π –≥–µ–Ω–µ—Ä–∞—Ü–∏–∏: {e}"
            )

    async def _play_local_fallback(self) -> WelcomeResult:
        """
        –ó–∞–ø–∞—Å–Ω–æ–π –≤–∞—Ä–∏–∞–Ω—Ç: –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ —á–µ—Ä–µ–∑ macOS 'say'
        """
        import asyncio

        try:
            text = self.config.text
            if not text:
                return WelcomeResult(False, "local", 0.0, "Empty text for fallback")

            logger.info(f"üó£Ô∏è [WELCOME_PLAYER] –ó–∞–ø—É—Å–∫ –ª–æ–∫–∞–ª—å–Ω–æ–≥–æ —Å–∏–Ω—Ç–µ–∑–∞: '{text}'")
            
            # –ó–∞–ø—É—Å–∫–∞–µ–º 'say' –≤ –æ—Ç–¥–µ–ª—å–Ω–æ–º –ø—Ä–æ—Ü–µ—Å—Å–µ, —á—Ç–æ–±—ã –Ω–µ –±–ª–æ–∫–∏—Ä–æ–≤–∞—Ç—å loop
            # –ò—Å–ø–æ–ª—å–∑—É–µ–º asyncio.create_subprocess_exec –¥–ª—è –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ—Å—Ç–∏
            process = await asyncio.create_subprocess_exec(
                "say", text,
                stdout=asyncio.subprocess.PIPE,
                stderr=asyncio.subprocess.PIPE
            )
            
            # –ñ–¥–µ–º –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è (—ç—Ç–æ –±–ª–æ–∫–∏—Ä—É–µ—Ç —Ç–µ–∫—É—â—É—é –∑–∞–¥–∞—á—É, –Ω–æ –Ω–µ loop, –ø–æ–∫–∞ 'say' –≥–æ–≤–æ—Ä–∏—Ç)
            # 'say' –∑–∞–≤–µ—Ä—à–∞–µ—Ç—Å—è —Ç–æ–ª—å–∫–æ –∫–æ–≥–¥–∞ –¥–æ–≥–æ–≤–æ—Ä–∏—Ç.
            await process.wait()
            
            if process.returncode != 0:
                stderr_data = await process.stderr.read() if process.stderr else b""
                error_msg = f"Local 'say' command failed: {stderr_data.decode().strip()}"
                logger.error(f"‚ùå [WELCOME_PLAYER] {error_msg}")
                return WelcomeResult(False, "local", 0.0, error_msg)

            # –û—Ü–µ–Ω–∫–∞ –¥–ª–∏—Ç–µ–ª—å–Ω–æ—Å—Ç–∏ –æ—á–µ–Ω—å –ø—Ä–∏–±–ª–∏–∑–∏—Ç–µ–ª—å–Ω–∞—è, –Ω–æ –¥–ª—è fallback –Ω–µ –∫—Ä–∏—Ç–∏—á–Ω–æ
            approx_duration = len(text) * 0.06  # ~16 chars per sec
            
            return WelcomeResult(
                success=True,
                method="local_fallback",
                duration_sec=approx_duration,
                metadata={"cmd": "say", "text": text}
            )

        except Exception as e:
            logger.error(f"‚ùå [WELCOME_PLAYER] –û—à–∏–±–∫–∞ –ª–æ–∫–∞–ª—å–Ω–æ–≥–æ fallback: {e}")
            return WelcomeResult(False, "local", 0.0, str(e))


    
    def get_audio_data(self) -> np.ndarray | None:
        """–ü–æ–ª—É—á–∏—Ç—å –∞—É–¥–∏–æ –¥–∞–Ω–Ω—ã–µ –¥–ª—è –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—è"""
        return self._last_audio

    def get_audio_metadata(self) -> dict[str, Any] | None:
        """–ü–æ–ª—É—á–∏—Ç—å –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ –ø–æ—Å–ª–µ–¥–Ω–µ–≥–æ –∞—É–¥–∏–æ"""
        return self._last_metadata
    
    def is_ready(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä–∏—Ç—å, –≥–æ—Ç–æ–≤ –ª–∏ –ø–ª–µ–µ—Ä –∫ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—é"""
        return self.state in [WelcomeState.IDLE, WelcomeState.COMPLETED]
    
    def reset(self):
        """–°–±—Ä–æ—Å–∏—Ç—å —Å–æ—Å—Ç–æ—è–Ω–∏–µ –ø–ª–µ–µ—Ä–∞"""
        self.state = WelcomeState.IDLE
        self._last_audio = None
        self._last_metadata = None
