#!/usr/bin/env python3
"""
End-to-end —Ç–µ—Å—Ç MCP –∫–æ–º–∞–Ω–¥ —Å —Ä–µ–∞–ª—å–Ω—ã–º —Å–µ—Ä–≤–µ—Ä–æ–º.

–ü—Ä–æ–≤–µ—Ä—è–µ—Ç –ø–æ–ª–Ω—É—é —Ü–µ–ø–æ—á–∫—É:
1. –ö–ª–∏–µ–Ω—Ç –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ —Å–µ—Ä–≤–µ—Ä
2. –°–µ—Ä–≤–µ—Ä –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∏ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç MCP –∫–æ–º–∞–Ω–¥—É
3. –ö–ª–∏–µ–Ω—Ç –ø–æ–ª—É—á–∞–µ—Ç –∏ –≤—ã–ø–æ–ª–Ω—è–µ—Ç –∫–æ–º–∞–Ω–¥—É

Feature ID: F-2025-016-mcp-app-opening-integration

–ò—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–µ:
    python3 scripts/test_mcp_e2e_real_server.py
"""

import asyncio
import json
import logging
import sys
import os
from pathlib import Path
from typing import Dict, Any, Optional
from datetime import datetime

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç–∏
project_root = Path(__file__).parent.parent
sys.path.insert(0, str(project_root))

# –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
logging.basicConfig(
    level=logging.INFO,
    format='%(asctime)s [%(levelname)s] %(name)s: %(message)s',
    datefmt='%Y-%m-%d %H:%M:%S'
)
logger = logging.getLogger(__name__)

FEATURE_ID = "F-2025-016-mcp-app-opening-integration"


async def test_mcp_action_e2e(
    server_host: str = "127.0.0.1",
    server_port: int = 50051,
    test_app_name: str = "Calculator"
) -> bool:
    """
    End-to-end —Ç–µ—Å—Ç MCP –∫–æ–º–∞–Ω–¥—ã –æ—Ç–∫—Ä—ã—Ç–∏—è –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è.
    
    Args:
        server_host: –•–æ—Å—Ç gRPC —Å–µ—Ä–≤–µ—Ä–∞
        server_port: –ü–æ—Ä—Ç gRPC —Å–µ—Ä–≤–µ—Ä–∞
        test_app_name: –ò–º—è –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è –¥–ª—è —Ç–µ—Å—Ç–∞
        
    Returns:
        True –µ—Å–ª–∏ —Ç–µ—Å—Ç –ø—Ä–æ—à–µ–ª —É—Å–ø–µ—à–Ω–æ, False –∏–Ω–∞—á–µ
    """
    logger.info("="*80)
    logger.info("E2E –¢–ï–°–¢: MCP –∫–æ–º–∞–Ω–¥–∞ –æ—Ç–∫—Ä—ã—Ç–∏—è –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è")
    logger.info("="*80)
    logger.info(f"–°–µ—Ä–≤–µ—Ä: {server_host}:{server_port}")
    logger.info(f"–¢–µ—Å—Ç–æ–≤–æ–µ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ: {test_app_name}")
    logger.info("")
    
    try:
        # –ò–º–ø–æ—Ä—Ç–∏—Ä—É–µ–º –Ω–µ–æ–±—Ö–æ–¥–∏–º—ã–µ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã
        from integration.core.event_bus import EventBus
        from integration.core.state_manager import ApplicationStateManager
        from integration.core.error_handler import ErrorHandler
        from integration.integrations.grpc_client_integration import GrpcClientIntegration
        from integration.integrations.action_execution_integration import ActionExecutionIntegration
        from config.unified_config_loader import UnifiedConfigLoader
        
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é
        config_loader = UnifiedConfigLoader()
        actions_cfg = config_loader.get_actions_config().get('open_app')
        
        if not actions_cfg or not actions_cfg.enabled:
            logger.error("‚ùå actions.open_app.enabled = false –≤ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏")
            logger.error("   –£—Å—Ç–∞–Ω–æ–≤–∏—Ç–µ actions.open_app.enabled: true –≤ unified_config.yaml")
            return False
        
        logger.info("‚úÖ –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –∫–ª–∏–µ–Ω—Ç–∞: actions.open_app.enabled = true")
        
        # –°–æ–∑–¥–∞–µ–º –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã
        event_bus = EventBus()
        state_manager = ApplicationStateManager()
        error_handler = ErrorHandler(event_bus)
        
        # –°–æ–∑–¥–∞–µ–º –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
        grpc_integration = GrpcClientIntegration(
            event_bus=event_bus,
            state_manager=state_manager,
            error_handler=error_handler,
        )
        
        action_integration = ActionExecutionIntegration(
            event_bus=event_bus,
            state_manager=state_manager,
            error_handler=error_handler,
        )
        
        # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º
        logger.info("üîß –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–π...")
        await grpc_integration.initialize()
        await action_integration.initialize()
        await action_integration.start()
        logger.info("‚úÖ –ò–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω—ã")
        
        # –°–æ–±–∏—Ä–∞–µ–º —Å–æ–±—ã—Ç–∏—è
        received_events = []
        event_checks = {
            'grpc.response.action': False,
            'actions.open_app.started': False,
            'actions.open_app.completed': False,
            'actions.open_app.failed': False,
        }
        
        def event_collector(event_name: str):
            def handler(event: Dict[str, Any]):
                received_events.append((event_name, event))
                event_checks[event_name] = True
                logger.info(f"üì® –°–æ–±—ã—Ç–∏–µ –ø–æ–ª—É—á–µ–Ω–æ: {event_name}")
            return handler
        
        # –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ —Å–æ–±—ã—Ç–∏—è
        await event_bus.subscribe("grpc.response.action", event_collector("grpc.response.action"))
        await event_bus.subscribe("actions.open_app.started", event_collector("actions.open_app.started"))
        await event_bus.subscribe("actions.open_app.completed", event_collector("actions.open_app.completed"))
        await event_bus.subscribe("actions.open_app.failed", event_collector("actions.open_app.failed"))
        
        logger.info("‚úÖ –ü–æ–¥–ø–∏—Å–∫–∏ –Ω–∞ —Å–æ–±—ã—Ç–∏—è –Ω–∞—Å—Ç—Ä–æ–µ–Ω—ã")
        
        # –ó–∞–ø—É—Å–∫–∞–µ–º gRPC –∫–ª–∏–µ–Ω—Ç
        logger.info("üîß –ó–∞–ø—É—Å–∫ gRPC –∫–ª–∏–µ–Ω—Ç–∞...")
        await grpc_integration.start()
        logger.info("‚úÖ gRPC –∫–ª–∏–µ–Ω—Ç –∑–∞–ø—É—â–µ–Ω")
        
        # –°–æ–∑–¥–∞–µ–º —Ç–µ—Å—Ç–æ–≤—ã–π –∑–∞–ø—Ä–æ—Å
        session_id = f"test-e2e-{datetime.now().strftime('%Y%m%d%H%M%S')}"
        test_request = f"–û—Ç–∫—Ä–æ–π {test_app_name}"
        
        logger.info("")
        logger.info("üì§ –û—Ç–ø—Ä–∞–≤–∫–∞ –∑–∞–ø—Ä–æ—Å–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä...")
        logger.info(f"   –°–µ—Å—Å–∏—è: {session_id}")
        logger.info(f"   –ó–∞–ø—Ä–æ—Å: {test_request}")
        logger.info("")
        
        # –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–ø—Ä–æ—Å —á–µ—Ä–µ–∑ gRPC
        # –ü—Ä–∏–º–µ—á–∞–Ω–∏–µ: –≤ —Ä–µ–∞–ª—å–Ω–æ–º —Å—Ü–µ–Ω–∞—Ä–∏–∏ —ç—Ç–æ –¥–µ–ª–∞–µ—Ç—Å—è —á–µ—Ä–µ–∑ VoiceRecognitionIntegration
        # –ó–¥–µ—Å—å –º—ã –∏–º–∏—Ç–∏—Ä—É–µ–º –æ—Ç–ø—Ä–∞–≤–∫—É –∑–∞–ø—Ä–æ—Å–∞
        try:
            # –ü–æ–ª—É—á–∞–µ–º gRPC –∫–ª–∏–µ–Ω—Ç –∏–∑ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
            if not hasattr(grpc_integration, '_client') or grpc_integration._client is None:
                logger.error("‚ùå gRPC –∫–ª–∏–µ–Ω—Ç –Ω–µ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω")
                return False
            
            # –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–ø—Ä–æ—Å
            # –í —Ä–µ–∞–ª—å–Ω–æ–º —Å—Ü–µ–Ω–∞—Ä–∏–∏ —ç—Ç–æ –¥–µ–ª–∞–µ—Ç—Å—è —á–µ—Ä–µ–∑ –º–µ—Ç–æ–¥ send_request
            # –ó–¥–µ—Å—å –º—ã –∏—Å–ø–æ–ª—å–∑—É–µ–º —É–ø—Ä–æ—â–µ–Ω–Ω—ã–π –ø–æ–¥—Ö–æ–¥ - –∂–¥–µ–º –æ—Ç–≤–µ—Ç–∞ –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞
            
            logger.info("‚è≥ –û–∂–∏–¥–∞–Ω–∏–µ –æ—Ç–≤–µ—Ç–∞ –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞ (–º–∞–∫—Å–∏–º—É–º 30 —Å–µ–∫—É–Ω–¥)...")
            
            # –ñ–¥–µ–º —Å–æ–±—ã—Ç–∏—è –≤ —Ç–µ—á–µ–Ω–∏–µ 30 —Å–µ–∫—É–Ω–¥
            timeout = 30.0
            start_time = asyncio.get_event_loop().time()
            
            while (asyncio.get_event_loop().time() - start_time) < timeout:
                await asyncio.sleep(0.5)
                
                # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –ø–æ–ª—É—á–µ–Ω—ã –ª–∏ –≤—Å–µ –Ω–µ–æ–±—Ö–æ–¥–∏–º—ã–µ —Å–æ–±—ã—Ç–∏—è
                if event_checks['grpc.response.action'] and event_checks['actions.open_app.started']:
                    if event_checks['actions.open_app.completed'] or event_checks['actions.open_app.failed']:
                        break
            
            elapsed = asyncio.get_event_loop().time() - start_time
            
            logger.info("")
            logger.info("üìä –†–µ–∑—É–ª—å—Ç–∞—Ç—ã —Ç–µ—Å—Ç–∞:")
            logger.info(f"   –í—Ä–µ–º—è –æ–∂–∏–¥–∞–Ω–∏—è: {elapsed:.2f} —Å–µ–∫—É–Ω–¥")
            logger.info(f"   –ü–æ–ª—É—á–µ–Ω–æ —Å–æ–±—ã—Ç–∏–π: {len(received_events)}")
            logger.info("")
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
            success = True
            issues = []
            
            if not event_checks['grpc.response.action']:
                success = False
                issues.append("–ù–µ –ø–æ–ª—É—á–µ–Ω–æ —Å–æ–±—ã—Ç–∏–µ grpc.response.action")
            
            if not event_checks['actions.open_app.started']:
                success = False
                issues.append("–ù–µ –ø–æ–ª—É—á–µ–Ω–æ —Å–æ–±—ã—Ç–∏–µ actions.open_app.started")
            
            if not event_checks['actions.open_app.completed'] and not event_checks['actions.open_app.failed']:
                success = False
                issues.append("–ù–µ –ø–æ–ª—É—á–µ–Ω–æ —Å–æ–±—ã—Ç–∏–µ actions.open_app.completed –∏–ª–∏ actions.open_app.failed")
            
            if issues:
                logger.error("‚ùå –¢–µ—Å—Ç –Ω–µ –ø—Ä–æ—à–µ–ª:")
                for issue in issues:
                    logger.error(f"   - {issue}")
                return False
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å–æ–¥–µ—Ä–∂–∏–º–æ–µ —Å–æ–±—ã—Ç–∏–π
            logger.info("‚úÖ –í—Å–µ —Å–æ–±—ã—Ç–∏—è –ø–æ–ª—É—á–µ–Ω—ã")
            logger.info("")
            logger.info("üìã –î–µ—Ç–∞–ª–∏ —Å–æ–±—ã—Ç–∏–π:")
            
            for event_name, event_data in received_events:
                logger.info(f"   {event_name}:")
                if isinstance(event_data, dict):
                    for key, value in event_data.items():
                        if key == 'action_json' and isinstance(value, str):
                            try:
                                parsed = json.loads(value)
                                logger.info(f"      {key}: {json.dumps(parsed, indent=8, ensure_ascii=False)}")
                            except Exception:
                                logger.info(f"      {key}: {value[:100]}...")
                        else:
                            logger.info(f"      {key}: {value}")
            
            logger.info("")
            logger.info("="*80)
            logger.info("‚úÖ E2E –¢–ï–°–¢ –ü–†–û–®–ï–õ –£–°–ü–ï–®–ù–û")
            logger.info("="*80)
            
            return True
            
        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –æ—Ç–ø—Ä–∞–≤–∫–µ –∑–∞–ø—Ä–æ—Å–∞: {e}")
            import traceback
            traceback.print_exc()
            return False
        
        finally:
            # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
            logger.info("")
            logger.info("üîß –û—Å—Ç–∞–Ω–æ–≤–∫–∞ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–π...")
            await action_integration.stop()
            await grpc_integration.stop()
            logger.info("‚úÖ –ò–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω—ã")
    
    except Exception as e:
        logger.error(f"‚ùå –ö—Ä–∏—Ç–∏—á–µ—Å–∫–∞—è –æ—à–∏–±–∫–∞: {e}")
        import traceback
        traceback.print_exc()
        return False


async def main():
    """–ì–ª–∞–≤–Ω–∞—è —Ñ—É–Ω–∫—Ü–∏—è."""
    import argparse
    
    parser = argparse.ArgumentParser(description='E2E —Ç–µ—Å—Ç MCP –∫–æ–º–∞–Ω–¥ —Å —Ä–µ–∞–ª—å–Ω—ã–º —Å–µ—Ä–≤–µ—Ä–æ–º')
    parser.add_argument('--host', default='127.0.0.1', help='–•–æ—Å—Ç gRPC —Å–µ—Ä–≤–µ—Ä–∞ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 127.0.0.1)')
    parser.add_argument('--port', type=int, default=50051, help='–ü–æ—Ä—Ç gRPC —Å–µ—Ä–≤–µ—Ä–∞ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 50051)')
    parser.add_argument('--app', default='Calculator', help='–ò–º—è –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è –¥–ª—è —Ç–µ—Å—Ç–∞ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: Calculator)')
    
    args = parser.parse_args()
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ —Å–µ—Ä–≤–µ—Ä –¥–æ—Å—Ç—É–ø–µ–Ω
    logger.info("üîç –ü—Ä–æ–≤–µ—Ä–∫–∞ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏ —Å–µ—Ä–≤–µ—Ä–∞...")
    try:
        import socket
        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
        sock.settimeout(2)
        result = sock.connect_ex((args.host, args.port))
        sock.close()
        
        if result != 0:
            logger.error(f"‚ùå –°–µ—Ä–≤–µ—Ä {args.host}:{args.port} –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω")
            logger.error("   –£–±–µ–¥–∏—Ç–µ—Å—å, —á—Ç–æ —Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω –∏ –¥–æ—Å—Ç—É–ø–µ–Ω")
            return 1
    except Exception as e:
        logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–æ–≤–µ—Ä–∫–∏ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏ —Å–µ—Ä–≤–µ—Ä–∞: {e}")
        return 1
    
    logger.info(f"‚úÖ –°–µ—Ä–≤–µ—Ä {args.host}:{args.port} –¥–æ—Å—Ç—É–ø–µ–Ω")
    logger.info("")
    
    # –ó–∞–ø—É—Å–∫–∞–µ–º —Ç–µ—Å—Ç
    success = await test_mcp_action_e2e(
        server_host=args.host,
        server_port=args.port,
        test_app_name=args.app
    )
    
    return 0 if success else 1


if __name__ == "__main__":
    exit_code = asyncio.run(main())
    sys.exit(exit_code)

