"""
GrpcClientIntegration ‚Äî –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏—è gRPC –∫–ª–∏–µ–Ω—Ç–∞ —Å EventBus

–ù–∞–∑–Ω–∞—á–µ–Ω–∏–µ:
- –°–æ–±—Ä–∞—Ç—å –¥–∞–Ω–Ω—ã–µ —Å–µ—Å—Å–∏–∏ (text + screenshot + hardware_id)
- –û—Ç–ø—Ä–∞–≤–∏—Ç—å StreamRequest –Ω–∞ —Å–µ—Ä–≤–µ—Ä –∏ —Ç—Ä–∞–Ω—Å–ª–∏—Ä–æ–≤–∞—Ç—å —á–∞–Ω–∫–∏ –≤ —Å–æ–±—ã—Ç–∏—è
- –û–±–µ—Å–ø–µ—á–∏—Ç—å –æ—Ç–º–µ–Ω—É, —Ç–∞–π–º–∞—É—Ç—ã –∏ —É—Å—Ç–æ–π—á–∏–≤–æ—Å—Ç—å –∫ —Å–µ—Ç–∏
"""

import asyncio
import base64
import logging
from dataclasses import dataclass
from pathlib import Path
from typing import Dict, Any, Optional, Set

from integration.core.event_bus import EventBus, EventPriority
from integration.core.state_manager import ApplicationStateManager
from integration.core.error_handler import ErrorHandler

from config.unified_config_loader import UnifiedConfigLoader

# –ú–æ–¥—É–ª—å–Ω—ã–π gRPC –∫–ª–∏–µ–Ω—Ç
from modules.grpc_client.core.grpc_client import GrpcClient

logger = logging.getLogger(__name__)


@dataclass
class GrpcClientIntegrationConfig:
    aggregate_timeout_sec: float = 1.5
    request_timeout_sec: float = 30.0
    max_retries: int = 3
    retry_delay_sec: float = 1.0
    server: str = "production"  # local|production|fallback (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é production –¥–ª—è Azure)
    use_network_gate: bool = True


class GrpcClientIntegration:
    """–ò–Ω—Ç–µ–≥—Ä–∞—Ü–∏—è modules.grpc_client —Å EventBus."""

    def __init__(
        self,
        event_bus: EventBus,
        state_manager: ApplicationStateManager,
        error_handler: ErrorHandler,
        config: Optional[GrpcClientIntegrationConfig] = None,
    ):
        self.event_bus = event_bus
        self.state_manager = state_manager
        self.error_handler = error_handler

        # –ö–æ–Ω—Ñ–∏–≥ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
        if config is None:
            try:
                uc = UnifiedConfigLoader()
                cfg = (uc._load_config().get('integrations', {}) or {}).get('grpc_client', {})
                config = GrpcClientIntegrationConfig(
                    aggregate_timeout_sec=float(cfg.get('aggregate_timeout_sec', 1.5)),
                    request_timeout_sec=float(cfg.get('request_timeout_sec', 30.0)),
                    max_retries=int(cfg.get('max_retries', 3)),
                    retry_delay_sec=float(cfg.get('retry_delay', 1.0)),
                    server=str(cfg.get('server', 'production')),
                    use_network_gate=bool(cfg.get('use_network_gate', True)),
                )
            except Exception as e:
                logger.warning(f"‚ö†Ô∏è –û—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ gRPC, –∏—Å–ø–æ–ª—å–∑—É–µ–º defaults: {e}")
                config = GrpcClientIntegrationConfig()
        self.config = config

        # gRPC –∫–ª–∏–µ–Ω—Ç
        self._client: Optional[GrpcClient] = None

        # –ö—ç—à hardware_id
        self._hardware_id: Optional[str] = None
        # –û–∂–∏–¥–∞–Ω–∏–µ –æ—Ç–≤–µ—Ç–∞ –Ω–∞ hardware.id_request –ø–æ request_id
        self._pending_hwid: Dict[str, asyncio.Future] = {}

        # –ê–≥—Ä–µ–≥–∞—Ç–æ—Ä –¥–∞–Ω–Ω—ã—Ö –ø–æ session_id
        self._sessions: Dict[Any, Dict[str, Any]] = {}
        # –ê–∫—Ç–∏–≤–Ω—ã–µ –æ—Ç–ø—Ä–∞–≤–∫–∏: session_id -> asyncio.Task
        self._inflight: Dict[Any, asyncio.Task] = {}
        # –û—Ç–º–µ—Ç–∫–∏ –æ —Ç–æ–º, —á—Ç–æ –æ—Ç–º–µ–Ω–∞ —É–∂–µ —É–≤–µ–¥–æ–º–ª–µ–Ω–∞ (—á—Ç–æ–±—ã –Ω–µ –¥—É–±–ª–∏—Ä–æ–≤–∞—Ç—å —Å–æ–±—ã—Ç–∏—è)
        self._cancel_notified: Set[Any] = set()

        # –°–µ—Ç—å
        self._network_connected: Optional[bool] = None

        self._initialized = False
        self._running = False

    # ---------------- Lifecycle ----------------
    async def initialize(self) -> bool:
        try:
            logger.info("Initializing GrpcClientIntegration...")
            # –°–æ–±–∏—Ä–∞–µ–º –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é gRPC –∏–∑ unified_config
            try:
                uc = UnifiedConfigLoader()
                net = uc.get_network_config()
                servers_cfg = {}
                for name, s in net.grpc_servers.items():
                    server_dict = {
                        'address': s.host,
                        'port': s.port,
                        'use_ssl': s.ssl,
                        'ssl_verify': s.ssl_verify,  # NEW
                        'use_http2': s.use_http2,  # NEW
                        'keepalive': s.keepalive,  # NEW
                        'grpc_path': s.grpc_path,  # NEW
                        'timeout': s.timeout,
                        'retry_attempts': s.retry_attempts,
                        'retry_delay': s.retry_delay,
                    }
                    # DEBUG: Log what we're passing to GrpcClient
                    logger.info(f"üîå [DEBUG] GrpcClientIntegration passing server '{name}' to GrpcClient: ssl_verify={s.ssl_verify}")
                    servers_cfg[name] = server_dict
                client_cfg = {
                    'servers': servers_cfg,
                    'auto_fallback': net.auto_fallback,
                    'connection_timeout': net.connection_check_interval,
                    'max_retry_attempts': self.config.max_retries,
                    'retry_delay': self.config.retry_delay_sec,
                }
            except Exception:
                client_cfg = None

            self._client = GrpcClient(config=client_cfg)

            # –ü–æ–¥–ø–∏—Å–∫–∏
            await self.event_bus.subscribe("voice.recognition_completed", self._on_voice_completed, EventPriority.HIGH)
            await self.event_bus.subscribe("screenshot.captured", self._on_screenshot_captured, EventPriority.HIGH)
            await self.event_bus.subscribe("hardware.id_obtained", self._on_hardware_id, EventPriority.HIGH)
            await self.event_bus.subscribe("hardware.id_response", self._on_hardware_id_response, EventPriority.HIGH)
            await self.event_bus.subscribe("keyboard.short_press", self._on_interrupt, EventPriority.CRITICAL)
            # –£–ë–†–ê–ù–û: interrupt.request - –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç—Å—è —Ü–µ–Ω—Ç—Ä–∞–ª–∏–∑–æ–≤–∞–Ω–Ω–æ –≤ InterruptManagementIntegration
            # –ê–¥—Ä–µ—Å–Ω–∞—è –æ—Ç–º–µ–Ω–∞ –∞–∫—Ç–∏–≤–Ω–æ–≥–æ –∑–∞–ø—Ä–æ—Å–∞ –ø–æ session_id (–∏–ª–∏ –ø–æ—Å–ª–µ–¥–Ω–∏–π –∞–∫—Ç–∏–≤–Ω—ã–π)
            try:
                await self.event_bus.subscribe("grpc.request_cancel", self._on_request_cancel, EventPriority.HIGH)
            except Exception:
                pass
            await self.event_bus.subscribe("network.status_changed", self._on_network_status_changed, EventPriority.MEDIUM)
            await self.event_bus.subscribe("app.shutdown", self._on_app_shutdown, EventPriority.HIGH)

            self._initialized = True
            logger.info("GrpcClientIntegration initialized")
            return True
        except Exception as e:
            await self._handle_error(e, where="grpc.initialize")
            return False

    async def start(self) -> bool:
        if not self._initialized:
            logger.error("GrpcClientIntegration not initialized")
            return False
        if self._running:
            return True
        
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º –Ω–∞–ª–∏—á–∏–µ hardware_id –ø–µ—Ä–µ–¥ –∑–∞–ø—É—Å–∫–æ–º
        await self._check_hardware_id_availability()
        
        # –õ–µ–Ω–∏–≤–∞—è –∫–æ–Ω–Ω–µ–∫—Ü–∏—è ‚Äî –ø–æ–¥–∫–ª—é—á–∏–º—Å—è –ø—Ä–∏ –ø–µ—Ä–≤–æ–π –æ—Ç–ø—Ä–∞–≤–∫–µ
        self._running = True
        logger.info("GrpcClientIntegration started (lazy connect)")
        return True

    async def stop(self) -> bool:
        try:
            # –û—Ç–º–µ–Ω—è–µ–º –≤—Å–µ –∞–∫—Ç–∏–≤–Ω—ã–µ –∑–∞–¥–∞—á–∏
            for sid, task in list(self._inflight.items()):
                task.cancel()
            self._inflight.clear()
            # –ß–∏—Å—Ç–∏–º –∫–ª–∏–µ–Ω—Ç
            if self._client:
                await self._client.cleanup()
            self._running = False
            return True
        except Exception as e:
            await self._handle_error(e, where="grpc.stop", severity="warning")
            return False

    # ---------------- Event handlers ----------------
    async def _on_voice_completed(self, event):
        try:
            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            text = data.get("text")
            if not sid or not text:
                return
            sess = self._sessions.setdefault(sid, {})
            sess['text'] = text
            await self._maybe_send(sid)
        except Exception as e:
            await self._handle_error(e, where="grpc.on_voice_completed", severity="warning")

    async def _on_screenshot_captured(self, event):
        try:
            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            path = data.get("image_path")
            if not sid or not path:
                return
            sess = self._sessions.setdefault(sid, {})
            sess['screenshot_path'] = path
            sess['width'] = data.get('width')
            sess['height'] = data.get('height')
            await self._maybe_send(sid)
        except Exception as e:
            await self._handle_error(e, where="grpc.on_screenshot_captured", severity="warning")

    async def _on_hardware_id(self, event):
        try:
            data = (event or {}).get("data", {})
            uuid = data.get("uuid")
            if uuid:
                self._hardware_id = uuid
        except Exception:
            pass

    async def _on_hardware_id_response(self, event):
        try:
            data = (event or {}).get("data", {})
            req_id = data.get("request_id")
            uuid = data.get("uuid")
            fut = self._pending_hwid.pop(req_id, None)
            if fut and not fut.done():
                fut.set_result(uuid)
        except Exception:
            pass

    async def _on_interrupt(self, event):
        try:
            # –û—Ç–º–µ–Ω—è–µ–º –∞–∫—Ç–∏–≤–Ω—É—é –∑–∞–¥–∞—á—É –¥–ª—è —Ç–µ–∫—É—â–µ–π —Å–µ—Å—Å–∏–∏, –µ—Å–ª–∏ –∏–∑–≤–µ—Å—Ç–Ω–∞
            # –ë–µ—Ä—ë–º –ø–æ—Å–ª–µ–¥–Ω—é—é –∑–∞–ø–∏—Å—å (–ø–æ –ø—Ä–æ—Å—Ç–æ—Ç–µ) ‚Äî –∏–ª–∏ –º–æ–∂–Ω–æ —Ö—Ä–∞–Ω–∏—Ç—å current_session –≤ StateManager –∫–æ–Ω—Ç–µ–∫—Å—Ç–µ
            sid = None
            if self._sessions:
                sid = list(self._sessions.keys())[-1]
            if sid and sid in self._inflight:
                task = self._inflight.pop(sid)
                task.cancel()
                self._cancel_notified.add(sid)
                await self.event_bus.publish("grpc.request_failed", {"session_id": sid, "error": "cancelled"})
        except Exception as e:
            await self._handle_error(e, where="grpc.on_interrupt", severity="warning")

    async def _on_request_cancel(self, event):
        """–ê–¥—Ä–µ—Å–Ω–∞—è –æ—Ç–º–µ–Ω–∞ –∞–∫—Ç–∏–≤–Ω–æ–≥–æ –∑–∞–ø—Ä–æ—Å–∞ –ø–æ session_id (–∏–ª–∏ –ø–æ—Å–ª–µ–¥–Ω–∏–π –∞–∫—Ç–∏–≤–Ω—ã–π)."""
        try:
            data = (event or {}).get("data", {})
            sid = data.get("session_id")
            target_sid = sid
            if not target_sid:
                # –ø–æ—Å–ª–µ–¥–Ω–∏–π –∞–∫—Ç–∏–≤–Ω—ã–π inflight
                try:
                    target_sid = next(reversed(self._inflight)) if self._inflight else None
                except Exception:
                    target_sid = None
            if not target_sid:
                logger.info("grpc.request_cancel: no inflight request to cancel (noop)")
                return
            task = self._inflight.pop(target_sid, None)
            if task and not task.done():
                task.cancel()
                self._cancel_notified.add(target_sid)
                await self.event_bus.publish("grpc.request_failed", {"session_id": target_sid, "error": "cancelled"})
            else:
                logger.debug(f"grpc.request_cancel: task not found or already done for sid={target_sid}")
        except Exception as e:
            await self._handle_error(e, where="grpc.on_request_cancel", severity="warning")

    async def _on_network_status_changed(self, event):
        try:
            data = (event or {}).get("data", {})
            new = data.get("new") or data.get("status") or "unknown"
            self._network_connected = (str(new).lower() == 'connected')
        except Exception:
            pass

    async def _on_app_shutdown(self, event):
        await self.stop()

    # ---------------- Core logic ----------------
    async def _maybe_send(self, session_id):
        """–ï—Å–ª–∏ –µ—Å—Ç—å —Ç–µ–∫—Å—Ç ‚Äî –∑–∞–ø—É—Å–∫–∞–µ–º –æ—Ç–ø—Ä–∞–≤–∫—É; —Å–∫—Ä–∏–Ω—à–æ—Ç –∂–¥—ë–º –∫–æ—Ä–æ—Ç–∫–æ."""
        sess = self._sessions.get(session_id) or {}
        if not sess.get('text'):
            return

        # –£–∂–µ –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º? ‚Äî –Ω–µ –¥—É–±–ª–∏—Ä—É–µ–º
        if session_id in self._inflight:
            return

        # –°–µ—Ç—å: –µ—Å–ª–∏ —è–≤–Ω–æ –æ—Ñ—Ñ–ª–∞–π–Ω –∏ –≤–∫–ª—é—á–µ–Ω–∞ —Å–µ—Ç.–∑–∞—â–µ–ª–∫–∞ ‚Äî –Ω–µ –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º
        if self.config.use_network_gate and self._network_connected is False:
            await self.event_bus.publish("grpc.request_failed", {"session_id": session_id, "error": "offline"})
            return

        async def _delayed_send():
            try:
                # –ñ–¥—ë–º —Å–∫—Ä–∏–Ω—à–æ—Ç –Ω–µ–±–æ–ª—å—à—É—é –ø–∞—É–∑—É, –µ—Å–ª–∏ –µ–≥–æ –µ—â—ë –Ω–µ—Ç
                if not sess.get('screenshot_path') and self.config.aggregate_timeout_sec > 0:
                    try:
                        await asyncio.sleep(self.config.aggregate_timeout_sec)
                    except asyncio.CancelledError:
                        return
                await self._send(session_id)
            finally:
                self._inflight.pop(session_id, None)

        task = asyncio.create_task(_delayed_send())
        self._cancel_notified.discard(session_id)
        self._inflight[session_id] = task

    async def _send(self, session_id):
        sess = self._sessions.get(session_id) or {}
        text = sess.get('text')
        if not text:
            return
        # –ü–æ–ª—É—á–∞–µ–º hardware_id
        hwid = await self._await_hardware_id(timeout_ms=3000)
        if not hwid:
            logger.warning(f"Hardware ID not available for session {session_id} - requesting explicitly")
            await self.event_bus.publish("hardware.id_request", {"request_id": f"grpc-{session_id}", "wait_ready": True})
            hwid = await self._await_hardware_id(timeout_ms=3000, request_id=f"grpc-{session_id}")
        if not hwid:
            logger.error(f"No Hardware ID available for gRPC request - session {session_id}")
            await self.event_bus.publish("grpc.request_failed", {"session_id": session_id, "error": "no_hardware_id"})
            return
        
        logger.info(f"Using Hardware ID: {hwid[:8]}... for session {session_id}")

        # –ö–æ–¥–∏—Ä—É–µ–º —Å–∫—Ä–∏–Ω—à–æ—Ç (–µ—Å–ª–∏ –µ—Å—Ç—å)
        screenshot_b64 = None
        width = sess.get('width')
        height = sess.get('height')
        path = sess.get('screenshot_path')
        if path:
            try:
                p = Path(path)
                if p.exists():
                    data = p.read_bytes()
                    screenshot_b64 = base64.b64encode(data).decode('ascii')
            except Exception as e:
                logger.debug(f"Failed to read screenshot: {e}")

        # –ü—É–±–ª–∏–∫—É–µ–º —Å—Ç–∞—Ä—Ç
        await self.event_bus.publish("grpc.request_started", {"session_id": session_id, "has_screenshot": bool(screenshot_b64)})

        # –õ–µ–Ω–∏–≤–∞—è –∫–æ–Ω–Ω–µ–∫—Ü–∏—è –∫ —Å–µ—Ä–≤–µ—Ä—É
        try:
            if self._client and not self._client.is_connected():
                logger.info(f"Connecting to gRPC server: {self.config.server}")
                # –Ø–≤–Ω–æ –≤—ã–±–∏—Ä–∞–µ–º –æ–∫—Ä—É–∂–µ–Ω–∏–µ –∏–∑ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ (local|production|fallback)
                success = await self._client.connect(self.config.server)
                if success:
                    logger.info(f"‚úÖ gRPC connected to {self.config.server}")
                else:
                    logger.error(f"‚ùå Failed to connect to gRPC server: {self.config.server}")
                    await self.event_bus.publish("grpc.request_failed", {"session_id": session_id, "error": "connect_failed"})
                    return
            else:
                logger.info(f"gRPC already connected to {self.config.server}")
        except Exception as e:
            logger.error(f"gRPC connection error: {e}")
            await self._handle_error(e, where="grpc.connect", severity="warning")
            await self.event_bus.publish("grpc.request_failed", {"session_id": session_id, "error": "connect_failed"})
            return

        # –°—Ç—Ä–∏–º–∏–º –æ—Ç–≤–µ—Ç—ã
        try:
            logger.info(f"Starting gRPC stream for session {session_id} with prompt: '{text[:50]}...'")
            got_terminal = False
            chunk_count = 0
            async for resp in self._client.stream_audio(
                prompt=text,
                screenshot_base64=screenshot_b64 or "",
                screen_info={"width": width, "height": height},
                hardware_id=hwid,
            ):
                chunk_count += 1

                # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –∫–∞–∫–æ–π —Ç–∏–ø content —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω (oneof) - –í–°–ï–ì–î–ê –∏—Å–ø–æ–ª—å–∑—É–µ–º WhichOneof –¥–ª—è protobuf!
                which_oneof = resp.WhichOneof('content') if hasattr(resp, 'WhichOneof') else None

                # –î–∏–∞–≥–Ω–æ—Å—Ç–∏–∫–∞: –ª–æ–≥–∏—Ä—É–µ–º —Ç–æ–ª—å–∫–æ –≤–∞–∂–Ω—ã–µ —Å–æ–±—ã—Ç–∏—è
                if chunk_count == 1 or chunk_count % 10 == 0 or which_oneof in ('end_message', 'error_message'):
                    logger.info(f"üîç gRPC response #{chunk_count}: WhichOneof('content')={which_oneof}")

                # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º –°–¢–†–û–ì–û –ø–æ —Ç–∏–ø—É oneof
                if which_oneof == 'text_chunk':
                    text = resp.text_chunk
                    logger.info(f"gRPC received text_chunk len={len(text)} for session {session_id}")
                    await self.event_bus.publish("grpc.response.text", {"session_id": session_id, "text": text})

                elif which_oneof == 'audio_chunk':
                    ch = resp.audio_chunk
                    data = bytes(ch.audio_data) if ch.audio_data else b""
                    dtype = ch.dtype or 'int16'
                    shape = list(ch.shape) if ch.shape else []

                    # –ü—É—Å—Ç–æ–π audio_chunk –±–æ–ª—å—à–µ –ù–ï —Å—á–∏—Ç–∞–µ–º –∑–∞–≤–µ—Ä—à–µ–Ω–∏–µ–º, —Ç.–∫. —Å–µ—Ä–≤–µ—Ä –¥–æ–ª–∂–µ–Ω —Å–ª–∞—Ç—å end_message
                    if len(data) == 0:
                        logger.warning(f"‚ö†Ô∏è Received empty audio_chunk - skipping (waiting for end_message)")
                        continue

                    logger.info(f"gRPC received audio_chunk bytes={len(data)} dtype={dtype} shape={shape} for session {session_id}")

                    await self.event_bus.publish("grpc.response.audio", {
                        "session_id": session_id,
                        "dtype": dtype,
                        "sample_rate": getattr(ch, 'sample_rate', None),
                        "channels": getattr(ch, 'channels', None),
                        "shape": shape,
                        "bytes": data,
                    })

                elif which_oneof == 'end_message':
                    end_msg = resp.end_message
                    logger.info(f"gRPC received end_message: '{end_msg}' for session {session_id}")
                    await self.event_bus.publish("grpc.request_completed", {"session_id": session_id})
                    got_terminal = True
                    break

                elif which_oneof == 'error_message':
                    err_msg = resp.error_message
                    logger.error(f"gRPC received error_message: '{err_msg}' for session {session_id}")
                    await self.event_bus.publish("grpc.request_failed", {"session_id": session_id, "error": err_msg})
                    got_terminal = True
                    break

                else:
                    logger.warning(f"‚ö†Ô∏è Unknown response type: which_oneof={which_oneof}")
            # –ï—Å–ª–∏ —Å—Ç—Ä–∏–º –∑–∞–≤–µ—Ä—à–∏–ª—Å—è –ë–ï–ó —è–≤–Ω–æ–≥–æ end_message/error ‚Äî –∑–∞–≤–µ—Ä—à–∞–µ–º –∑–∞–ø—Ä–æ—Å —Å–∞–º–∏,
            # —á—Ç–æ–±—ã UI –Ω–µ –∑–∞–≤–∏—Å–∞–ª –≤ —Å–æ—Å—Ç–æ—è–Ω–∏–∏ PROCESSING.
            if not got_terminal:
                await self.event_bus.publish("grpc.request_completed", {"session_id": session_id})
        except asyncio.CancelledError:
            # –¢–∏—Ö–æ –≤—ã—Ö–æ–¥–∏–º –ø—Ä–∏ –æ—Ç–º–µ–Ω–µ; —Å–æ–±—ã—Ç–∏–µ –º–æ–≥–ª–æ –±—ã—Ç—å –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ —Ä–∞–Ω–µ–µ
            if session_id not in self._cancel_notified:
                self._cancel_notified.add(session_id)
                await self.event_bus.publish("grpc.request_failed", {"session_id": session_id, "error": "cancelled"})
        except Exception as e:
            await self._handle_error(e, where="grpc.stream_audio", severity="warning")
            await self.event_bus.publish("grpc.request_failed", {"session_id": session_id, "error": str(e)})

    # ---------------- Utilities ----------------
    async def _await_hardware_id(self, timeout_ms: int = 1500, request_id: Optional[str] = None) -> Optional[str]:
        if self._hardware_id:
            return self._hardware_id
        # –ï—Å–ª–∏ –∂–¥—ë–º –∫–æ–Ω–∫—Ä–µ—Ç–Ω—ã–π request_id –æ—Ç–≤–µ—Ç–∞
        if request_id:
            fut = asyncio.get_running_loop().create_future()
            self._pending_hwid[request_id] = fut
            try:
                return await asyncio.wait_for(fut, timeout=timeout_ms / 1000.0)
            except asyncio.TimeoutError:
                return None
        # –ò–Ω–∞—á–µ –∂–¥—ë–º —Å–æ–±—ã—Ç–∏–µ hardware.id_obtained (–∫—ç—à –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ HardwareID –∑–∞–ø–æ–ª–Ω–∏—Ç _hardware_id)
        try:
            # –ù–µ–±–ª–æ–∫–∏—Ä—É—é—â–µ–µ –æ–∂–∏–¥–∞–Ω–∏–µ: –æ–ø—Ä–∞—à–∏–≤–∞–µ–º –Ω–µ—Å–∫–æ–ª—å–∫–æ —Ä–∞–∑
            deadline = asyncio.get_event_loop().time() + (timeout_ms / 1000.0)
            while asyncio.get_event_loop().time() < deadline:
                if self._hardware_id:
                    return self._hardware_id
                await asyncio.sleep(0.05)
        except Exception:
            pass
        return None

    async def _handle_error(self, e: Exception, *, where: str, severity: str = "error"):
        if hasattr(self.error_handler, 'handle'):
            await self.error_handler.handle(
                error=e,
                category="grpc",
                severity=severity,
                context={"where": where}
            )
        else:
            logger.error(f"gRPC integration error at {where}: {e}")

    async def _check_hardware_id_availability(self):
        """–ü—Ä–æ–≤–µ—Ä—è–µ–º –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç—å hardware_id –ø–µ—Ä–µ–¥ –∑–∞–ø—É—Å–∫–æ–º"""
        if not self._hardware_id:
            logger.warning("Hardware ID not available - requesting from hardware_id integration")
            # –ó–∞–ø—Ä–∞—à–∏–≤–∞–µ–º hardware_id —á–µ—Ä–µ–∑ EventBus
            await self.event_bus.publish("hardware.id_request", {"wait_ready": True})
            # –ñ–¥–µ–º –æ—Ç–≤–µ—Ç (—Å —Ç–∞–π–º–∞—É—Ç–æ–º)
            try:
                # –ñ–¥–µ–º –¥–æ–ª—å—à–µ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è Hardware ID
                await asyncio.sleep(0.5)
                if not self._hardware_id:
                    logger.warning("Hardware ID still not available - continuing without it")
            except Exception as e:
                logger.warning(f"Hardware ID check failed: {e}")

    def get_status(self) -> Dict[str, Any]:
        return {
            "initialized": self._initialized,
            "running": self._running,
            "hardware_id_cached": bool(self._hardware_id),
            "inflight": list(self._inflight.keys()),
        }
