#!/usr/bin/env python3
"""
–¢–µ—Å—Ç –≥–æ–ª–æ—Å–æ–≤–æ–≥–æ —Ñ–∏–¥–±–µ–∫–∞ –ø—Ä–∏ –æ—à–∏–±–∫–∞—Ö –æ—Ç–∫—Ä—ã—Ç–∏—è –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–π (F-2025-016).

–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, —á—Ç–æ –ø—Ä–∏ –ø–æ–ø—ã—Ç–∫–µ –æ—Ç–∫—Ä—ã—Ç—å –Ω–µ—Å—É—â–µ—Å—Ç–≤—É—é—â–µ–µ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ
—Å–∏—Å—Ç–µ–º–∞ –ø—É–±–ª–∏–∫—É–µ—Ç speech.playback.request —Å –ø—Ä–∞–≤–∏–ª—å–Ω—ã–º —Ç–µ–∫—Å—Ç–æ–º.

Feature ID: F-2025-016-mcp-app-opening-integration
"""

import asyncio
import sys
import os
import json
import logging
from pathlib import Path

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ –º–æ–¥—É–ª—è–º
sys.path.insert(0, str(Path(__file__).parent.parent))

from integration.core.event_bus import EventBus
from integration.core.state_manager import ApplicationStateManager
from integration.core.error_handler import ErrorHandler
from integration.integrations.action_execution_integration import ActionExecutionIntegration, FEATURE_ID
from modules.action_executor import ActionResult

logging.basicConfig(
    level=logging.INFO,
    format='%(asctime)s - [%(name)s] - %(levelname)s - %(message)s'
)
logger = logging.getLogger(__name__)


class SpeechFeedbackTester:
    """–¢–µ—Å—Ç–µ—Ä –≥–æ–ª–æ—Å–æ–≤–æ–≥–æ —Ñ–∏–¥–±–µ–∫–∞ –ø—Ä–∏ –æ—à–∏–±–∫–∞—Ö."""
    
    def __init__(self):
        self.event_bus = EventBus()
        self.state_manager = ApplicationStateManager()
        self.error_handler = ErrorHandler()
        self.integration = None
        self.received_events = []
        self.speech_events = []
        
    async def setup(self):
        """–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏."""
        logger.info("üîß –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è ActionExecutionIntegration...")
        self.integration = ActionExecutionIntegration(
            event_bus=self.event_bus,
            state_manager=self.state_manager,
            error_handler=self.error_handler,
        )
        
        await self.integration.initialize()
        await self.integration.start()
        
        # –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ —Å–æ–±—ã—Ç–∏—è –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏
        await self.event_bus.subscribe("actions.open_app.failed", self._on_failed)
        await self.event_bus.subscribe("speech.playback.request", self._on_speech_request)
        
        logger.info("‚úÖ –ò–Ω—Ç–µ–≥—Ä–∞—Ü–∏—è –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω–∞")
        
    async def _on_failed(self, event):
        """–û–±—Ä–∞–±–æ—Ç—á–∏–∫ —Å–æ–±—ã—Ç–∏—è failed."""
        data = event.get("data", event)
        logger.info(f"üì¢ –ü–æ–ª—É—á–µ–Ω–æ —Å–æ–±—ã—Ç–∏–µ actions.open_app.failed: {data}")
        self.received_events.append(("actions.open_app.failed", data))
        
    async def _on_speech_request(self, event):
        """–û–±—Ä–∞–±–æ—Ç—á–∏–∫ —Å–æ–±—ã—Ç–∏—è speech.playback.request."""
        data = event.get("data", event)
        logger.info(f"üîä –ü–æ–ª—É—á–µ–Ω–æ —Å–æ–±—ã—Ç–∏–µ speech.playback.request: {data}")
        self.speech_events.append(data)
        
    async def test_nonexistent_app(self, app_name: str = "FooBarNonExistentApp"):
        """–¢–µ—Å—Ç: –ø–æ–ø—ã—Ç–∫–∞ –æ—Ç–∫—Ä—ã—Ç—å –Ω–µ—Å—É—â–µ—Å—Ç–≤—É—é—â–µ–µ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ."""
        logger.info(f"\n{'='*60}")
        logger.info(f"üß™ –¢–ï–°–¢: –ü–æ–ø—ã—Ç–∫–∞ –æ—Ç–∫—Ä—ã—Ç—å –Ω–µ—Å—É—â–µ—Å—Ç–≤—É—é—â–µ–µ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ '{app_name}'")
        logger.info(f"{'='*60}\n")
        
        # –û—á–∏—â–∞–µ–º –ø—Ä–µ–¥—ã–¥—É—â–∏–µ —Å–æ–±—ã—Ç–∏—è
        self.received_events.clear()
        self.speech_events.clear()
        
        # –°–æ–∑–¥–∞—ë–º —Å–æ–±—ã—Ç–∏–µ –∫–∞–∫ –±—É–¥—Ç–æ –æ—Ç gRPC –∫–ª–∏–µ–Ω—Ç–∞
        session_id = f"test-session-{int(asyncio.get_event_loop().time() * 1000)}"
        event = {
            "session_id": session_id,
            "action_json": json.dumps({
                "command": "open_app",
                "args": {"app_name": app_name}
            }),
            "feature_id": FEATURE_ID,
        }
        
        logger.info(f"üì§ –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —Å–æ–±—ã—Ç–∏–µ grpc.response.action –¥–ª—è '{app_name}'...")
        
        # –ú–æ–∫–∞–µ–º executor —á—Ç–æ–±—ã –æ–Ω –≤–æ–∑–≤—Ä–∞—â–∞–ª –æ—à–∏–±–∫—É app_not_found
        from unittest.mock import patch
        with patch.object(self.integration._executor, 'execute') as mock_execute:
            mock_execute.return_value = ActionResult(
                success=False,
                message=f"Application '{app_name}' not found",
                error="app_not_found",
                app_name=app_name
            )
            
            # –ü—É–±–ª–∏–∫—É–µ–º —Å–æ–±—ã—Ç–∏–µ
            await self.event_bus.publish("grpc.response.action", event)
            
            # –ñ–¥—ë–º –æ–±—Ä–∞–±–æ—Ç–∫–∏
            await asyncio.sleep(0.5)
            
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
        logger.info(f"\n{'='*60}")
        logger.info("üìä –†–ï–ó–£–õ–¨–¢–ê–¢–´ –¢–ï–°–¢–ê")
        logger.info(f"{'='*60}\n")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ 1: –°–æ–±—ã—Ç–∏–µ failed –¥–æ–ª–∂–Ω–æ –±—ã—Ç—å –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ
        failed_events = [e for e in self.received_events if e[0] == "actions.open_app.failed"]
        if failed_events:
            logger.info("‚úÖ –°–æ–±—ã—Ç–∏–µ actions.open_app.failed –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ")
            failed_data = failed_events[0][1]
            logger.info(f"   - error: {failed_data.get('error')}")
            logger.info(f"   - session_id: {failed_data.get('session_id')}")
            logger.info(f"   - feature_id: {failed_data.get('feature_id')}")
            
            if failed_data.get('error') == "app_not_found":
                logger.info("   ‚úÖ –ö–æ–¥ –æ—à–∏–±–∫–∏ –ø—Ä–∞–≤–∏–ª—å–Ω—ã–π: app_not_found")
            else:
                logger.error(f"   ‚ùå –ù–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π –∫–æ–¥ –æ—à–∏–±–∫–∏: {failed_data.get('error')}")
        else:
            logger.error("‚ùå –°–æ–±—ã—Ç–∏–µ actions.open_app.failed –ù–ï –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ!")
            
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ 2: –°–æ–±—ã—Ç–∏–µ speech.playback.request –¥–æ–ª–∂–Ω–æ –±—ã—Ç—å –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ
        if self.speech_events:
            logger.info("‚úÖ –°–æ–±—ã—Ç–∏–µ speech.playback.request –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ")
            speech_data = self.speech_events[0]
            logger.info(f"   - text: '{speech_data.get('text')}'")
            logger.info(f"   - session_id: {speech_data.get('session_id')}")
            logger.info(f"   - feature_id: {speech_data.get('feature_id')}")
            logger.info(f"   - source: {speech_data.get('source')}")
            logger.info(f"   - priority: {speech_data.get('priority')}")
            logger.info(f"   - voice: {speech_data.get('voice')}")
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø—Ä–∞–≤–∏–ª—å–Ω–æ—Å—Ç—å —Ç–µ–∫—Å—Ç–∞
            expected_text = f"The app {app_name} isn't installed on this Mac."
            actual_text = speech_data.get('text', '')
            if actual_text == expected_text:
                logger.info(f"   ‚úÖ –¢–µ–∫—Å—Ç —Å–æ–æ–±—â–µ–Ω–∏—è –ø—Ä–∞–≤–∏–ª—å–Ω—ã–π!")
            else:
                logger.error(f"   ‚ùå –ù–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π —Ç–µ–∫—Å—Ç!")
                logger.error(f"      –û–∂–∏–¥–∞–ª–æ—Å—å: '{expected_text}'")
                logger.error(f"      –ü–æ–ª—É—á–µ–Ω–æ:  '{actual_text}'")
                
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
            checks = [
                (speech_data.get('session_id') == session_id, "session_id"),
                (speech_data.get('feature_id') == FEATURE_ID, "feature_id"),
                (speech_data.get('source') == "actions.open_app", "source"),
                (speech_data.get('priority') == "high", "priority"),
                (speech_data.get('voice') == "en-US", "voice"),
            ]
            
            for check, name in checks:
                if check:
                    logger.info(f"   ‚úÖ {name} –ø—Ä–∞–≤–∏–ª—å–Ω—ã–π")
                else:
                    logger.error(f"   ‚ùå {name} –Ω–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π: {speech_data.get(name)}")
        else:
            logger.error("‚ùå –°–æ–±—ã—Ç–∏–µ speech.playback.request –ù–ï –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ!")
            logger.error("   –ü—Ä–æ–≤–µ—Ä—å—Ç–µ, —á—Ç–æ speak_errors=True –≤ –∫–æ–Ω—Ñ–∏–≥–µ")
            
        # –ò—Ç–æ–≥–æ–≤—ã–π —Ä–µ–∑—É–ª—å—Ç–∞—Ç
        success = len(failed_events) > 0 and len(self.speech_events) > 0
        if success:
            logger.info(f"\nüéâ –¢–ï–°–¢ –ü–†–û–ô–î–ï–ù: –ì–æ–ª–æ—Å–æ–≤–æ–π —Ñ–∏–¥–±–µ–∫ —Ä–∞–±–æ—Ç–∞–µ—Ç –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ!")
        else:
            logger.error(f"\n‚ùå –¢–ï–°–¢ –ù–ï –ü–†–û–ô–î–ï–ù: –ü—Ä–æ–±–ª–µ–º—ã —Å –ø—É–±–ª–∏–∫–∞—Ü–∏–µ–π —Å–æ–±—ã—Ç–∏–π")
            
        return success
        
    async def cleanup(self):
        """–û—á–∏—Å—Ç–∫–∞ —Ä–µ—Å—É—Ä—Å–æ–≤."""
        if self.integration:
            await self.integration.stop()
        logger.info("üßπ –û—á–∏—Å—Ç–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞")


async def main():
    """–ì–ª–∞–≤–Ω–∞—è —Ñ—É–Ω–∫—Ü–∏—è."""
    tester = SpeechFeedbackTester()
    
    try:
        await tester.setup()
        
        # –¢–µ—Å—Ç 1: –ù–µ—Å—É—â–µ—Å—Ç–≤—É—é—â–µ–µ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ
        result1 = await tester.test_nonexistent_app("FooBarNonExistentApp")
        
        # –ù–µ–±–æ–ª—å—à–∞—è –ø–∞—É–∑–∞ –º–µ–∂–¥—É —Ç–µ—Å—Ç–∞–º–∏
        await asyncio.sleep(0.5)
        
        # –¢–µ—Å—Ç 2: –î—Ä—É–≥–æ–µ –Ω–µ—Å—É—â–µ—Å—Ç–≤—É—é—â–µ–µ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ
        result2 = await tester.test_nonexistent_app("AnotherNonExistentApp")
        
        # –ò—Ç–æ–≥–æ–≤—ã–π —Ä–µ–∑—É–ª—å—Ç–∞—Ç
        logger.info(f"\n{'='*60}")
        logger.info("üìã –ò–¢–û–ì–û–í–´–ô –†–ï–ó–£–õ–¨–¢–ê–¢")
        logger.info(f"{'='*60}\n")
        
        if result1 and result2:
            logger.info("‚úÖ –í–°–ï –¢–ï–°–¢–´ –ü–†–û–ô–î–ï–ù–´ –£–°–ü–ï–®–ù–û")
            return 0
        else:
            logger.error("‚ùå –ù–ï–ö–û–¢–û–†–´–ï –¢–ï–°–¢–´ –ù–ï –ü–†–û–ô–î–ï–ù–´")
            return 1
            
    except Exception as e:
        logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏–∏ —Ç–µ—Å—Ç–æ–≤: {e}", exc_info=True)
        return 1
    finally:
        await tester.cleanup()


if __name__ == "__main__":
    exit_code = asyncio.run(main())
    sys.exit(exit_code)



