#!/usr/bin/env python3
"""
E2E —Ç–µ—Å—Ç –¥–ª—è –ø–æ–ª–Ω–æ–≥–æ —Ü–∏–∫–ª–∞ close_app.

–ü—Ä–æ–≤–µ—Ä—è–µ—Ç:
1. –ü–æ–ª—É—á–µ–Ω–∏–µ –∫–æ–º–∞–Ω–¥—ã –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞ (—Å–∏–º—É–ª—è—Ü–∏—è)
2. –ü–∞—Ä—Å–∏–Ω–≥ –∏ –≤–∞–ª–∏–¥–∞—Ü–∏—é
3. –í—ã–ø–æ–ª–Ω–µ–Ω–∏–µ —á–µ—Ä–µ–∑ MCP —Å–µ—Ä–≤–µ—Ä
4. –û–±—Ä–∞–±–æ—Ç–∫—É —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤

Feature ID: F-2025-014-close-app
"""

import asyncio
import json
import sys
from pathlib import Path

# –î–æ–±–∞–≤–ª—è–µ–º –∫–æ—Ä–µ–Ω—å –ø—Ä–æ–µ–∫—Ç–∞ –≤ –ø—É—Ç—å
project_root = Path(__file__).parent.parent.parent
sys.path.insert(0, str(project_root / "client(prod)"))

from integration.core.event_bus import EventBus
from integration.core.state_manager import ApplicationStateManager
from integration.core.error_handler import ErrorHandler
from integration.integrations.action_execution_integration import ActionExecutionIntegration
from unittest.mock import MagicMock


async def test_close_app_e2e():
    """E2E —Ç–µ—Å—Ç –¥–ª—è close_app."""
    print("=" * 60)
    print("E2E —Ç–µ—Å—Ç: close_app –ø–æ–ª–Ω—ã–π —Ü–∏–∫–ª")
    print("=" * 60)
    print()
    
    # –°–æ–∑–¥–∞–µ–º –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã
    event_bus = EventBus()
    state_manager = MagicMock(spec=ApplicationStateManager)
    error_handler = MagicMock(spec=ErrorHandler)
    
    # –°–æ–∑–¥–∞–µ–º –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏—é
    integration = ActionExecutionIntegration(
        event_bus=event_bus,
        state_manager=state_manager,
        error_handler=error_handler,
    )
    
    # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º
    await integration.initialize()
    await integration.start()
    
    # –°–æ–±–∏—Ä–∞–µ–º —Å–æ–±—ã—Ç–∏—è
    received_events = []
    
    def event_collector(event_name: str):
        def handler(event: Dict[str, Any]):
            received_events.append((event_name, event))
        return handler
    
    # –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ —Å–æ–±—ã—Ç–∏—è
    await event_bus.subscribe("actions.close_app.started", event_collector("actions.close_app.started"))
    await event_bus.subscribe("actions.close_app.completed", event_collector("actions.close_app.completed"))
    await event_bus.subscribe("actions.close_app.failed", event_collector("actions.close_app.failed"))
    
    # –°–æ–∑–¥–∞–µ–º —Ç–µ—Å—Ç–æ–≤—É—é –∫–æ–º–∞–Ω–¥—É
    session_id = "test-e2e-close-app"
    action_json = json.dumps({
        "command": "close_app",
        "args": {
            "app_name": "Calculator"
        }
    }, ensure_ascii=False)
    
    print(f"üì§ –û—Ç–ø—Ä–∞–≤–∫–∞ –∫–æ–º–∞–Ω–¥—ã: {action_json}")
    print()
    
    # –ü—É–±–ª–∏–∫—É–µ–º —Å–æ–±—ã—Ç–∏–µ grpc.response.action (—Å–∏–º—É–ª—è—Ü–∏—è –ø–æ–ª—É—á–µ–Ω–∏—è –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞)
    await event_bus.publish("grpc.response.action", {
        "session_id": session_id,
        "action_json": action_json,
        "feature_id": "F-2025-014-close-app",
    })
    
    # –ñ–¥–µ–º –æ–±—Ä–∞–±–æ—Ç–∫–∏
    print("‚è≥ –û–∂–∏–¥–∞–Ω–∏–µ –æ–±—Ä–∞–±–æ—Ç–∫–∏...")
    await asyncio.sleep(2.0)
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
    print()
    print("=" * 60)
    print("–†–µ–∑—É–ª—å—Ç–∞—Ç—ã:")
    print("=" * 60)
    
    event_names = [name for name, _ in received_events]
    
    if "actions.close_app.started" in event_names:
        print("‚úÖ –°–æ–±—ã—Ç–∏–µ actions.close_app.started –ø–æ–ª—É—á–µ–Ω–æ")
        started_event = next((data for name, data in received_events if name == "actions.close_app.started"), None)
        if started_event:
            event_data = started_event.get("data", started_event) if isinstance(started_event, dict) and "data" in started_event else started_event
            print(f"   Session ID: {event_data.get('session_id')}")
            print(f"   Feature ID: {event_data.get('feature_id')}")
    else:
        print("‚ùå –°–æ–±—ã—Ç–∏–µ actions.close_app.started –ù–ï –ø–æ–ª—É—á–µ–Ω–æ")
    
    if "actions.close_app.completed" in event_names:
        print("‚úÖ –°–æ–±—ã—Ç–∏–µ actions.close_app.completed –ø–æ–ª—É—á–µ–Ω–æ")
        completed_event = next((data for name, data in received_events if name == "actions.close_app.completed"), None)
        if completed_event:
            event_data = completed_event.get("data", completed_event) if isinstance(completed_event, dict) and "data" in completed_event else completed_event
            print(f"   Message: {event_data.get('message')}")
            print(f"   App Name: {event_data.get('app_name')}")
    elif "actions.close_app.failed" in event_names:
        print("‚ö†Ô∏è  –°–æ–±—ã—Ç–∏–µ actions.close_app.failed –ø–æ–ª—É—á–µ–Ω–æ")
        failed_event = next((data for name, data in received_events if name == "actions.close_app.failed"), None)
        if failed_event:
            event_data = failed_event.get("data", failed_event) if isinstance(failed_event, dict) and "data" in failed_event else failed_event
            print(f"   Error: {event_data.get('error_code')}")
            print(f"   Message: {event_data.get('message')}")
    else:
        print("‚ùå –°–æ–±—ã—Ç–∏—è completed/failed –ù–ï –ø–æ–ª—É—á–µ–Ω—ã")
    
    print()
    print("=" * 60)
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —É—Å–ø–µ—à–Ω–æ—Å—Ç—å
    success = "actions.close_app.completed" in event_names
    if success:
        print("‚úÖ E2E —Ç–µ—Å—Ç –ø—Ä–æ–π–¥–µ–Ω —É—Å–ø–µ—à–Ω–æ!")
        return 0
    else:
        print("‚ùå E2E —Ç–µ—Å—Ç –Ω–µ –ø—Ä–æ—à–µ–ª")
        return 1


if __name__ == "__main__":
    from typing import Dict, Any
    exit_code = asyncio.run(test_close_app_e2e())
    sys.exit(exit_code)


