#!/usr/bin/env python3
"""
–¢–µ—Å—Ç –≥—Ä–∞–Ω–∏—á–Ω—ã—Ö —Å–ª—É—á–∞–µ–≤ –¥–ª—è close_app.

–ü—Ä–æ–≤–µ—Ä—è–µ—Ç:
1. –ü—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –Ω–µ –∑–∞–ø—É—â–µ–Ω–æ
2. –ü—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –Ω–µ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç
3. –ù–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π —Ñ–æ—Ä–º–∞—Ç JSON
4. –û—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç app_name
5. Feature flag –≤—ã–∫–ª—é—á–µ–Ω

Feature ID: F-2025-014-close-app
"""

import asyncio
import json
import sys
from pathlib import Path

# –î–æ–±–∞–≤–ª—è–µ–º –∫–æ—Ä–µ–Ω—å –ø—Ä–æ–µ–∫—Ç–∞ –≤ –ø—É—Ç—å
project_root = Path(__file__).parent.parent.parent
sys.path.insert(0, str(project_root / "client(prod)"))

from integration.core.event_bus import EventBus
from integration.core.state_manager import ApplicationStateManager
from integration.core.error_handler import ErrorHandler
from integration.integrations.action_execution_integration import ActionExecutionIntegration
from unittest.mock import MagicMock
from typing import Dict, Any


async def test_edge_case(name: str, action_json: str, expected_events: list, session_id: str = "test-edge-case"):
    """–¢–µ—Å—Ç –æ–¥–Ω–æ–≥–æ –≥—Ä–∞–Ω–∏—á–Ω–æ–≥–æ —Å–ª—É—á–∞—è."""
    print(f"\n{'=' * 60}")
    print(f"–¢–µ—Å—Ç: {name}")
    print(f"{'=' * 60}")
    
    # –°–æ–∑–¥–∞–µ–º –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã
    event_bus = EventBus()
    state_manager = MagicMock(spec=ApplicationStateManager)
    error_handler = MagicMock(spec=ErrorHandler)
    
    # –°–æ–∑–¥–∞–µ–º –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏—é
    integration = ActionExecutionIntegration(
        event_bus=event_bus,
        state_manager=state_manager,
        error_handler=error_handler,
    )
    
    # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º
    await integration.initialize()
    await integration.start()
    
    # –°–æ–±–∏—Ä–∞–µ–º —Å–æ–±—ã—Ç–∏—è
    received_events = []
    
    def event_collector(event_name: str):
        def handler(event: Dict[str, Any]):
            received_events.append((event_name, event))
        return handler
    
    # –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ –≤—Å–µ –≤–æ–∑–º–æ–∂–Ω—ã–µ —Å–æ–±—ã—Ç–∏—è
    await event_bus.subscribe("actions.close_app.started", event_collector("actions.close_app.started"))
    await event_bus.subscribe("actions.close_app.completed", event_collector("actions.close_app.completed"))
    await event_bus.subscribe("actions.close_app.failed", event_collector("actions.close_app.failed"))
    
    print(f"üì§ –û—Ç–ø—Ä–∞–≤–∫–∞: {action_json}")
    
    # –ü—É–±–ª–∏–∫—É–µ–º —Å–æ–±—ã—Ç–∏–µ
    await event_bus.publish("grpc.response.action", {
        "session_id": session_id,
        "action_json": action_json,
        "feature_id": "F-2025-014-close-app",
    })
    
    # –ñ–¥–µ–º –æ–±—Ä–∞–±–æ—Ç–∫–∏
    await asyncio.sleep(1.0)
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
    event_names = [name for name, _ in received_events]
    
    print(f"üì• –ü–æ–ª—É—á–µ–Ω–Ω—ã–µ —Å–æ–±—ã—Ç–∏—è: {event_names}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º –æ–∂–∏–¥–∞–µ–º—ã–µ —Å–æ–±—ã—Ç–∏—è
    success = True
    for expected_event in expected_events:
        if expected_event not in event_names:
            print(f"‚ùå –û–∂–∏–¥–∞–ª–æ—Å—å —Å–æ–±—ã—Ç–∏–µ: {expected_event}")
            success = False
    
    if success:
        print(f"‚úÖ –¢–µ—Å—Ç –ø—Ä–æ–π–¥–µ–Ω")
    else:
        print(f"‚ùå –¢–µ—Å—Ç –Ω–µ –ø—Ä–æ–π–¥–µ–Ω")
    
    return success


async def run_all_edge_cases():
    """–ó–∞–ø—É—Å–∫ –≤—Å–µ—Ö —Ç–µ—Å—Ç–æ–≤ –≥—Ä–∞–Ω–∏—á–Ω—ã—Ö —Å–ª—É—á–∞–µ–≤."""
    print("=" * 60)
    print("–¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –≥—Ä–∞–Ω–∏—á–Ω—ã—Ö —Å–ª—É—á–∞–µ–≤ –¥–ª—è close_app")
    print("=" * 60)
    
    results = []
    
    # –¢–µ—Å—Ç 1: –ü—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –Ω–µ –∑–∞–ø—É—â–µ–Ω–æ (–¥–æ–ª–∂–Ω–æ –≤–µ—Ä–Ω—É—Ç—å completed —Å —Å–æ–æ–±—â–µ–Ω–∏–µ–º)
    results.append(await test_edge_case(
        "–ü—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –Ω–µ –∑–∞–ø—É—â–µ–Ω–æ",
        json.dumps({"command": "close_app", "args": {"app_name": "NonExistentApp"}}),
        ["actions.close_app.started", "actions.close_app.completed"]
    ))
    
    # –¢–µ—Å—Ç 2: –û—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç app_name (–¥–æ–ª–∂–Ω–æ –≤–µ—Ä–Ω—É—Ç—å failed)
    results.append(await test_edge_case(
        "–û—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç app_name",
        json.dumps({"command": "close_app", "args": {}}),
        ["actions.close_app.failed"]  # –î–æ–ª–∂–Ω–æ –±—ã—Ç—å failed –∏–∑-–∑–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏
    ))
    
    # –¢–µ—Å—Ç 3: –ù–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π —Ñ–æ—Ä–º–∞—Ç JSON (–¥–æ–ª–∂–Ω–æ –±—ã—Ç—å –æ–±—Ä–∞–±–æ—Ç–∞–Ω–æ –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ)
    results.append(await test_edge_case(
        "–ù–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π —Ñ–æ—Ä–º–∞—Ç JSON",
        '{"command": "close_app", "args": {"app_name": "Calculator"',  # –ù–µ–ø–æ–ª–Ω—ã–π JSON
        []  # –ú–æ–∂–µ—Ç –Ω–µ –æ–±—Ä–∞–±–æ—Ç–∞—Ç—å—Å—è –∏–ª–∏ –≤–µ—Ä–Ω—É—Ç—å failed
    ))
    
    # –¢–µ—Å—Ç 4: –ù–µ–∏–∑–≤–µ—Å—Ç–Ω–∞—è –∫–æ–º–∞–Ω–¥–∞ (–¥–æ–ª–∂–Ω–∞ –±—ã—Ç—å –ø—Ä–æ–∏–≥–Ω–æ—Ä–∏—Ä–æ–≤–∞–Ω–∞)
    results.append(await test_edge_case(
        "–ù–µ–∏–∑–≤–µ—Å—Ç–Ω–∞—è –∫–æ–º–∞–Ω–¥–∞",
        json.dumps({"command": "unknown_command", "args": {"app_name": "Calculator"}}),
        []  # –î–æ–ª–∂–Ω–∞ –±—ã—Ç—å –ø—Ä–æ–∏–≥–Ω–æ—Ä–∏—Ä–æ–≤–∞–Ω–∞
    ))
    
    # –¢–µ—Å—Ç 5: –ü—É—Å—Ç–æ–π app_name (–¥–æ–ª–∂–Ω–æ –≤–µ—Ä–Ω—É—Ç—å failed)
    results.append(await test_edge_case(
        "–ü—É—Å—Ç–æ–π app_name",
        json.dumps({"command": "close_app", "args": {"app_name": ""}}),
        ["actions.close_app.failed"]  # –î–æ–ª–∂–Ω–æ –±—ã—Ç—å failed –∏–∑-–∑–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏
    ))
    
    # –ò—Ç–æ–≥–∏
    print("\n" + "=" * 60)
    print("–ò—Ç–æ–≥–∏ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è –≥—Ä–∞–Ω–∏—á–Ω—ã—Ö —Å–ª—É—á–∞–µ–≤:")
    print("=" * 60)
    
    passed = sum(1 for r in results if r)
    total = len(results)
    
    print(f"‚úÖ –ü—Ä–æ–π–¥–µ–Ω–æ: {passed}/{total}")
    print(f"‚ùå –ü—Ä–æ–≤–∞–ª–µ–Ω–æ: {total - passed}/{total}")
    
    if passed == total:
        print("\n‚úÖ –í—Å–µ –≥—Ä–∞–Ω–∏—á–Ω—ã–µ —Å–ª—É—á–∞–∏ –æ–±—Ä–∞–±–æ—Ç–∞–Ω—ã –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ!")
        return 0
    else:
        print("\n‚ö†Ô∏è  –ù–µ–∫–æ—Ç–æ—Ä—ã–µ –≥—Ä–∞–Ω–∏—á–Ω—ã–µ —Å–ª—É—á–∞–∏ —Ç—Ä–µ–±—É—é—Ç –≤–Ω–∏–º–∞–Ω–∏—è")
        return 1


if __name__ == "__main__":
    exit_code = asyncio.run(run_all_edge_cases())
    sys.exit(exit_code)

