#!/usr/bin/env python3
"""
–¢–µ—Å—Ç —Ä–µ–∞–ª—å–Ω–æ–≥–æ gRPC –≤—ã–∑–æ–≤–∞ —á–µ—Ä–µ–∑ HTTPS
"""

import sys
import os
import asyncio
from pathlib import Path

# –û—Ç–∫–ª—é—á–∞–µ–º –ø—Ä–æ–≤–µ—Ä–∫—É SSL –¥–ª—è self-signed
os.environ['GRPC_DEFAULT_SSL_ROOTS_FILE_PATH'] = ''

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç–∏
CLIENT_ROOT = Path(__file__).parent
sys.path.insert(0, str(CLIENT_ROOT))
sys.path.insert(0, str(CLIENT_ROOT / "modules"))
sys.path.insert(0, str(CLIENT_ROOT / "modules" / "grpc_client" / "proto"))

import grpc
import grpc.aio
import streaming_pb2
import streaming_pb2_grpc

SERVER_HOST = "20.151.51.172"
GRPC_ADDRESS = f"{SERVER_HOST}:443"

print("=" * 80)
print("–¢–ï–°–¢ –†–ï–ê–õ–¨–ù–û–ì–û gRPC –í–´–ó–û–í–ê –ß–ï–†–ï–ó HTTPS")
print("=" * 80)
print(f"\nEndpoint: {GRPC_ADDRESS}")
print("Protocol: HTTPS + HTTP/2")
print("Certificate: Self-signed (verification disabled)")
print()

async def test_grpc_welcome():
    try:
        # –ß–∏—Ç–∞–µ–º —Å–µ—Ä—Ç–∏—Ñ–∏–∫–∞—Ç —Å–µ—Ä–≤–µ—Ä–∞ (—Å SAN)
        with open('/tmp/server_cert_new.pem', 'rb') as f:
            root_cert = f.read()

        # SSL credentials —Å —Å–µ—Ä—Ç–∏—Ñ–∏–∫–∞—Ç–æ–º —Å–µ—Ä–≤–µ—Ä–∞
        credentials = grpc.ssl_channel_credentials(
            root_certificates=root_cert,
            private_key=None,
            certificate_chain=None
        )

        # –û–ø—Ü–∏–∏ –¥–ª—è HTTPS + HTTP/2
        options = [
            # –ù–ï –∏—Å–ø–æ–ª—å–∑—É–µ–º ssl_target_name_override –∫–æ–≥–¥–∞ –¥–æ–≤–µ—Ä—è–µ–º —Å–µ—Ä—Ç–∏—Ñ–∏–∫–∞—Ç—É!
            ('grpc.default_authority', SERVER_HOST),
            ('grpc.http2.true_binary', 1),
            ('grpc.max_send_message_length', 50 * 1024 * 1024),
            ('grpc.max_receive_message_length', 50 * 1024 * 1024),
            ('grpc.keepalive_time_ms', 120000),
            ('grpc.keepalive_timeout_ms', 10000),
        ]

        print("üîå –°–æ–∑–¥–∞—ë–º HTTPS –∫–∞–Ω–∞–ª...")
        channel = grpc.aio.secure_channel(
            GRPC_ADDRESS,
            credentials,
            options=options
        )

        print("üì° –°–æ–∑–¥–∞—ë–º gRPC stub...")
        stub = streaming_pb2_grpc.StreamingServiceStub(channel)

        print("üé§ –û—Ç–ø—Ä–∞–≤–ª—è–µ–º Welcome –∑–∞–ø—Ä–æ—Å...")

        # –°–æ–∑–¥–∞—ë–º –∑–∞–ø—Ä–æ—Å
        request = streaming_pb2.WelcomeRequest(
            text="–ü—Ä–∏–≤–µ—Ç",
            voice="alloy",
            language="ru-RU",
            session_id="test-session-123"
        )

        # –î–µ–ª–∞–µ–º –≤—ã–∑–æ–≤ —Å —Ç–∞–π–º–∞—É—Ç–æ–º (—ç—Ç–æ stream, –Ω—É–∂–Ω–æ –ø–æ–ª—É—á–∏—Ç—å –ø–µ—Ä–≤—ã–π —á–∞–Ω–∫)
        try:
            print("   –û–∂–∏–¥–∞–µ–º –æ—Ç–≤–µ—Ç –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞...")
            stream = stub.GenerateWelcomeAudio(request)

            # –ü–æ–ª—É—á–∞–µ–º –ø–µ—Ä–≤—ã–π chunk
            first_chunk = await asyncio.wait_for(
                stream.read(),
                timeout=10.0
            )

            print(f"‚úÖ SUCCESS! –ü–æ–ª—É—á–µ–Ω –æ—Ç–≤–µ—Ç –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞:")
            print(f"   Response: {first_chunk}")
            print(f"\nüéâ gRPC —á–µ—Ä–µ–∑ HTTPS —Ä–∞–±–æ—Ç–∞–µ—Ç –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ!")

            # –ó–∞–∫—Ä—ã–≤–∞–µ–º stream
            stream.cancel()

        except asyncio.TimeoutError:
            print("‚ùå TIMEOUT: –°–µ—Ä–≤–µ—Ä –Ω–µ –æ—Ç–≤–µ—Ç–∏–ª –∑–∞ 10 —Å–µ–∫—É–Ω–¥")
            print("   –í–æ–∑–º–æ–∂–Ω—ã–µ –ø—Ä–∏—á–∏–Ω—ã:")
            print("   - Nginx –Ω–µ –ø–µ—Ä–µ–¥–∞—ë—Ç gRPC –∑–∞–ø—Ä–æ—Å—ã")
            print("   - gRPC —Å–µ—Ä–≤–µ—Ä –Ω–µ –æ—Ç–≤–µ—á–∞–µ—Ç")
            print("   - –ü—Ä–æ–±–ª–µ–º–∞ —Å SSL/TLS handshake")
            print()

        except grpc.aio.AioRpcError as e:
            print(f"‚ùå gRPC ERROR: {e.code()}")
            print(f"   Details: {e.details()}")
            print(f"   Debug: {e.debug_error_string()}")
            print()

        # –ó–∞–∫—Ä—ã–≤–∞–µ–º –∫–∞–Ω–∞–ª
        await channel.close()
        print("üîí –ö–∞–Ω–∞–ª –∑–∞–∫—Ä—ã—Ç")

    except Exception as e:
        print(f"‚ùå EXCEPTION: {e}")
        import traceback
        traceback.print_exc()

print("–ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–∞...")
asyncio.run(test_grpc_welcome())

print("=" * 80)
print("–¢–ï–°–¢ –ó–ê–í–ï–†–®–Å–ù")
print("=" * 80)
